문서 분위기에 맞춰 권유에 해요체 사용

--- a/patterns/app-structure.html
+++ b/patterns/app-structure.html
@@ -109,10 +109,10 @@ Gmail이나 Google Play는 다양한 데이터 뷰가 계층 구조로 조합되
 </p>
 <ul>
 <li>
-액션 바에 앱의 아이콘이나 제목을 사용합니다.
+액션 바에 앱의 아이콘이나 제목을 사용하세요.
 </li>
 <li>
-만약 최상위 수준이 여러 개의 뷰를 사용하거나 여러 사용자 계정 데이터 사이의 전환이 중요하면,
+최상위 수준이 여러 개의 뷰를 사용하거나 여러 사용자 계정 데이터 사이의 전환이 중요하면,
 뷰 사이의 이동이 사용자에게 명확하게 보이도록 액션 바에 뷰 컨트롤을 붙이세요.
 </li>
 <li>
@@ -141,7 +141,7 @@ Gmail이나 Google Play는 다양한 데이터 뷰가 계층 구조로 조합되
 
 <h4>앱의 정체성 만들기</h4>
 <p>
-액션 바를 넘어 앱의 정체성을 만듭시다.
+액션 바를 넘어 앱의 정체성을 만드세요.
 여러분이 만드는 앱의 정체성은 데이터와 데이터를 구성하는 방법, 사용자와 상호작용하는 방식에 따라 결정됩니다.
 특히 미디어 위주의 앱에서는 단순한 리스트 뷰를 단조롭게 만들지 말고 데이터를 뽐낼 수 있는 독특한 레이아웃을 시도해 보세요.
 </p>
