--- a/style/iconography.html
+++ b/style/iconography.html
@@ -10,7 +10,7 @@ title: 아이콘
 <h2 id="launcher">런처</h2>
 
 
-<p>런처 아이콘은 홈이나 모든 앱 화면에 있는 앱의 시각적 표현입니다. 사용자는 홈의 바탕화면을 바꿀 수 있기 때문에 런처 아이콘은 어떤 바탕화면에서도 잘 보이도록 만들어야 합니다.</p>
+<p>런처 아이콘은 홈이나 모든 앱 화면에 있는 앱의 시각적 표현입니다. 사용자는 홈의 바탕화면을 바꿀 수 있으니 런처 아이콘은 어떤 바탕화면에서도 잘 보이도록 만들어 주세요.</p>
 
 
 <div class="layout-content-row">
@@ -92,14 +92,14 @@ title: 아이콘
 
 <p>
 
-액션 바 아이콘은 여러분의 앱에서 사용자가 할 수 있는 가장 중요한 액션들을 표시하는 그래픽 버튼입니다. 
-각 아이콘은 사용자가 한눈에 알아볼 수 있는 하나의 의미를 담은 간단한 표현을 사용해야합니다.
- 
+액션 바 아이콘은 여러분의 앱에서 사용자가 할 수 있는 가장 중요한 액션들을 표시하는 그래픽 버튼입니다.
+각 아이콘은 사용자가 한눈에 알아볼 수 있는 하나의 의미를 담은 간단한 표현을 사용해 주세요.
+
 </p>
 
 <p>
 
-"새로고침"이나 "공유" 같이 널리 쓰이는 액션은 미리 정의된 아이콘을 사용해야합니다. 
+"새로고침"이나 "공유" 같이 널리 쓰이는 액션은 미리 정의된 아이콘을 사용해 주세요.
 아래 링크에서는 다양한 화면 밀도에 알맞고 홀로 라이트, 홀로 다크 테마에 어울리는 아이콘을 받을 수 있습니다.
 또 어떤 테마에든 맞게 고쳐 쓸 수 있도록 스타일을 갖추지 않은 아이콘과 Adobe&#174; Illustrator&#174; 원본 파일도 있습니다.
 </p>
