patterns/gesture 행동->조작법

--- a/patterns/gestures.html
+++ b/patterns/gestures.html
@@ -14,7 +14,7 @@ title: 제스처
 
 <ul>
 <li class="no-bullet with-icon action">
-    <h4>행동</h4>
+    <h4>조작법</h4>
     <p>눌렀다, 뗍니다</p>
 </li>
 </ul>
@@ -28,7 +28,7 @@ title: 제스처
 
 <ul>
 <li class="no-bullet with-icon action">
-    <h4>행동</h4>
+    <h4>조작법</h4>
     <p>누르고, 기다렸다, 똅니다</p>
 </li>
 </ul>
@@ -40,7 +40,7 @@ title: 제스처
 
 <ul>
 <li class="no-bullet with-icon action">
-    <h4>행동</h4>
+    <h4>조작법</h4>
     <p>누르고 움직이고 뗍니다</p>
 </li>
 </ul>
@@ -57,7 +57,7 @@ title: 제스처
 
 <ul>
 <li class="no-bullet with-icon action">
-    <h4>행동</h4>
+    <h4>조작법</h4>
     <p>롱 프레스 후, 움직이고, 뗍니다</p>
 </li>
 </ul>
@@ -69,7 +69,7 @@ title: 제스처
 
 <ul>
 <li class="no-bullet with-icon action">
-    <h4>행동</h4>
+    <h4>조작법</h4>
     <p>짧게 이어 두번 누릅니다</p>
 </li>
 </ul>
@@ -81,7 +81,7 @@ title: 제스처
 
 <ul>
 <li class="no-bullet with-icon action">
-    <h4>행동</h4>
+    <h4>조작법</h4>
     <p>두 손가락으로 누르고, 밖으로 벌리고, 뗍니다</p>
 </li>
 </ul>
@@ -98,7 +98,7 @@ title: 제스처
 
 <ul>
 <li class="no-bullet with-icon action">
-    <h4>행동</h4>
+    <h4>조작법</h4>
     <p>두 손가락으로 누르고, 안으로 좁히고, 뗍니다</p>
 </li>
 </ul>
