issue #67 action을 액션으로 번역

--- a/patterns/app-structure.html
+++ b/patterns/app-structure.html
@@ -233,11 +233,11 @@ Music은 사용자가 카테고리 뷰(앨범)에서 데이터 항목(노래)의
 </div>
 
 
-<h4>여러 데이터 항목에 대해 행동하기</h4>
+<h4>여러 데이터 항목을 대상으로 액션</h4>
 
 <p>
 대부분 카테고리 뷰는 사람들을 상세 컨텐츠로 안내하는 기능을 하지만,
-데이터 모음에서 할 일을 선택하는 것도 이점이 있다는 것을 명심하세요.
+데이터 모음에서 액션을 선택하는 것도 이점이 있다는 것을 명심하세요.
 </p>
 
 <p>
