--- a/patterns/selection.html
+++ b/patterns/selection.html
@@ -13,11 +13,11 @@ title: 선택
 
 <h4>무엇이 바뀌었나요?</h4>
 <p>
-이전 버전 안드로이드에서 롱 프레스 제스처는 선택한 항목에 어떤 행동을 수행할지 컨텍스트 메뉴를 띄우는 제스처로 널리 사용되었습니다.
+이전 버전 안드로이드에서 롱 프레스 제스처는 선택한 항목에 어떤 액션을 수행할지 컨텍스트 메뉴를 띄우는 제스처로 널리 사용되었습니다.
 </p>
 <p>
 이 패턴은 안드로이드 3.0에서 바뀌었습니다.
-롱 프레스 제스처로 항목을 선택하고, 컨텍스트 액션 바(CAB, contextual action bar)를 통해 그 항목에 관련된 행동을 수행하거나 선택 관리 기능을 수행합니다.
+롱 프레스 제스처로 항목을 선택하고, 컨텍스트 액션 바(CAB, contextual action bar)를 통해 그 항목에 관련된 액션을 수행하거나 선택 관리 기능을 수행합니다.
 </p>
 
   </div>
