빠진 번역을 추가하고 다듬음

--- a/patterns/pure-android.html
+++ b/patterns/pure-android.html
@@ -2,7 +2,12 @@
 layout: default
 title: 순수한 안드로이드
 ---
-<p>대부분의 개발자는 앱을 여러 플랫폼에 배포하고 싶어합니다. 안드로이드 앱을 준비할 때, 서로 다른 플랫폼은 서로 다른 규칙과 관례를 따른다는 것을 고려하십시오. 어느 한 플랫폼에서 완벽히 들어맞는 디자인이라도 다른 플랫폼의 컨텍스트 상에서는 모양새와 느낌이 잘 맞지 않을 수 있습니다. "한번만 디자인하고, 어디나 배포하는" 방식이 당장은 시간을 절약해 줄지도 모르지만, 일관성이 떨어져 사용자가 어색하게 느끼는 앱이 되는 현실적인 문제를 감수하는 것입니다. 아래의 지침을 고려하여 흔히 빠질 수 있는 함정과 실수를 피해 가세요.</p>
+<p>
+대부분의 개발자는 앱을 여러 플랫폼에 배포하고 싶어합니다.
+안드로이드 앱을 준비할 때 서로 다른 플랫폼은 서로 다른 규칙과 관례를 따른다는 것을 잊지 마세요.
+어느 한 플랫폼에서 완벽히 들어맞는 디자인이라도 다른 플랫폼의 컨텍스트에서는 모양새와 느낌이 잘 맞지 않을 수 있습니다.
+"한번만 디자인하고, 어디든 배포하라" 방식은 당장 시간을 절약해 주지만, 일관성이 떨어져 사용자가 어색하게 느끼는 앱이 될 위험을 감수해야 합니다.
+아래의 지침을 고려하여 흔히 빠질 수 있는 함정과 실수를 피해 가세요.</p>
 
 
 <div class="vspace size-1">&#160;</div>
@@ -12,7 +17,18 @@ title: 순수한 안드로이드
   <div class="layout-content-col span-5">
 
 <h4>다른 플랫폼의 UI 요소를 흉내 내지 마세요</h4>
-<p>안드로이드 앱을 만드실 때, 다른 플랫폼의 테마를 가진 UI 요소를 그대로 가져오거나 흉내내려 하지 마세요. 이 스타일 안내서의 <a href="../building-blocks/index.html">구성 요소</a> 부분을 검토하여, 안드로이드의 주요 UI 요소에는 어떤 것이 있고 시스템 기본 테마에서 어떤 모양인지 알아보세요. 또한 안드로이드 플랫폼에서 제공하는 앱을 참고해서 그러한 요소를 앱에 어떤 방식으로 적용하고 있는지 감을 잡으세요. UI 요소를 입맛에 맞게 고치실 때는 다른 플랫폼의 관례를 따르는 것이 아니라, 여러분의 브랜딩에 맞추어 조심스럽게 해야 합니다.</p>
+<p>
+보통 플랫폼은 매우 독특한 풍미로 주의 깊게 디자인한 UI 요소를 묶어 제공합니다.
+예를 들어 어떤 플랫폼은 버튼은 둥근 모서리를 갖도록 합니다.
+어떤 다른 플랫폼은 제목 바에 그라디에이션을 사용하죠.
+똑같은 목적을 가진 구성 요소를 조금씩 다르게 동작하도록 디자인하기도 합니다.
+</p>
+<p>
+안드로이드 앱을 만들 때 다른 플랫폼의 테마를 가진 UI 요소를 그대로 가져오거나 그 동작 방식을 흉내내려 하지 마세요.
+이 스타일 안내서의 <a href="../building-blocks/index.html">구성 요소</a> 부분을 보고 안드로이드의 주요 UI 요소에는 어떤 것이 있고 시스템 기본 테마에서 어떤 모양인지 알아보세요.
+또 안드로이드 플랫폼에서 제공하는 앱을 참고하여 그러한 요소를 앱에 어떤 방식으로 적용하는지 감도 잡으세요.
+UI 요소의 테마를 입맛에 맞게 고치실 때는 다른 플랫폼의 관례를 따르는 대신 여러분의 브랜드에 맞추도록 주의하세요.
+</p>
 
   </div>
   <div class="layout-content-col span-8">
