--- a/get-started/ui-overview.html
+++ b/get-started/ui-overview.html
@@ -2,13 +2,19 @@
 layout: default
 title: UI 개요
 ---
-<p>안드로이드 시스템 UI는 여러분의 앱 위에 프레임워크를 제공합니다.
-시스템 UI의 주요 부분으로 홈 화면 경험, 전역적인 기기 탐색, 알림이 있습니다.</p>
+<p>
+안드로이드 시스템 UI는 여러분의 앱 위에 프레임워크를 제공합니다.
+시스템 UI의 주요 부분으로 홈 화면 경험, 전역적인 기기 탐색, 알림이 있습니다.
+</p>
 
-<p>여러분의 앱은 안드로이드 경험 전반에서 일관성과 즐거운 사용성을 제공하는 중요한 역할을 할 것입니다.
-우리는 이 장 끝에서 앱이 이러한 목표를 달성하기 위한 주요 사항을 소개합니다.</p>
+<p>
+여러분이 만들 앱은 안드로이드를 전반적으로 일관성있게 경험하고 즐겁게 사용하는 역할을 가집니다.
+이 장 마지막에서는 그러한 목표를 달성하기 위해 앱이 가져야 할 주요 사항을 소개합니다.
+</p>
 
-<p>먼저 안드로이드 사용자 인터페이스의 주요 측면에 대해 간단히 개요를 훑어보도록 하겠습니다.</p>
+<p>
+우선, 안드로이드 사용자 인터페이스의 주요 측면에 대해 간단히 개요를 훑어보도록 하겠습니다.
+</p>
 
 
 <h2 id="home-all-apps-recents">홈, 모든 앱, 최근 앱</h2>
@@ -21,27 +27,43 @@ title: UI 개요
   <div class="layout-content-col span-4">
 
     <img src="../media/ui_overview_home_screen.png"><h4>홈 화면</h4>
-<p>홈은 앱 바로가기, 폴더, 위젯을 직접 배치하는 공간입니다.
-홈 화면에서 좌우로 스와이프하여 다른 홈 화면 패널을 살펴볼 수 있습니다.</p>
-<p>아래에 있는 즐겨찾기 트레이는 현재의 패널과 관계 없이 가장 중요한 바로 가기와 폴더를 항상 보여줍니다.</p>
-<p>즐겨찾기 트레이 중앙의 모든 앱 버튼을 터치해 전체 앱과 위젯 목록을 볼 수 있습니다.</p>
+<p>
+홈은 앱 바로가기, 폴더, 위젯을 직접 배치하는 공간입니다.
+홈 화면에서 좌우로 스와이프하여 다른 패널로 이동할 수 있습니다.
+</p>
+<p>
+아랫 부분의 즐겨찾기 트레이에서 가장 중요한 바로 가기와 폴더를 항상 표시해 줍니다.
+</p>
+<p>
+즐겨찾기 트레이 중앙의 모든 앱 버튼을 터치하면 전체 앱과 위젯 목록을 볼 수 있습니다.
+</p>
 
   </div>
   <div class="layout-content-col span-4">
 
     <img src="../media/ui_overview_all_apps.png"><h4>모든 앱 화면</h4>
-<p>모든 앱 화면에서 기기에 설치한 모든 앱과 위젯을 볼 수 있습니다.</p>
-<p>사용자는 모든 앱 화면에서 앱이나 위젯 아이콘을 끌어 홈 화면 빈 곳 어디에나 배치할 수 있습니다.</p>
+<p>
+모든 앱 화면에서는 기기에 설치한 모든 앱과 위젯을 볼 수 있습니다.
+</p>
+<p>
+모든 앱 화면에서 앱이나 위젯 아이콘을 끌어서 홈 화면 빈 곳에 둘 수 있습니다.
+</p>
 
   </div>
   <div class="layout-content-col span-4">
 
     <img src="../media/ui_overview_recents.png"><h4>최근 앱(Recents) 화면</h4>
-<p>최근 앱은 최근에 사용한 앱 사이를 이동하는 효율적인 방법을 제공합니다.
-최근 앱은 진행중인 작업 사이의 명확한 탐색 경로도 제공합니다.</p>
-<p>내비게이션 바 오른쪽의 최근 앱 버튼은 사용자가 최근에 사용한 앱 목록을 표시합니다.
-이 목록은 가장 최근에 사용한 앱을 아래부터 역순으로 표시합니다.</p>
-<p>앱을 터치해 해당 앱으로 전환하거나 좌나 우로 스와이프해서 항목을 지울 수도 있습니다.</p>
+<p>
+최근 앱 화면에서는 최근 사용한 앱을 쉽게 전환할 수 있습니다.
+여러 작업 사이에서의 탐색 경로를 명확하게 알 수 있습니다.
+</p>
+<p>
+내비게이션 바 오른쪽의 최근 앱 버튼을 누르면 최근에 사용한 앱 목록이 나옵니다.
+앱 목록은 시간 역순으로 나오며, 가장 최근에 쓴 앱을 맨 아래에 보여줍니다.
+</p>
+<p>
+앱을 터치하여 그 앱을 선택하여 전환합니다. 앱을 좌우로 스와이프하면 항목을 지울 수 있습니다.
+</p>
 
   </div>
 </div>
