ui overview: '홈, 모든 앱, 최근 앱' 마지막 문장 조금 더 수정

--- a/get-started/ui-overview.html
+++ b/get-started/ui-overview.html
@@ -62,7 +62,7 @@ title: UI 개요
 앱 목록은 시간 역순으로 나오며, 가장 최근에 쓴 앱을 맨 아래에 보여줍니다.
 </p>
 <p>
-앱을 터치하여 그 앱을 선택하여 전환합니다. 앱을 좌우로 스와이프하면 항목을 지울 수 있습니다.
+앱을 터치하면 그 앱으로 전환합니다. 앱을 좌우로 스와이프하면 항목을 지울 수 있습니다.
 </p>
 
   </div>
