--- a/get-started/ui-overview.html
+++ b/get-started/ui-overview.html
@@ -72,10 +72,11 @@ title: UI 개요
 <h2 id="system-bars">시스템 바</h2>
 
 
-<p>시스템 바는 알림 표시, 기기 상태 안내, 기기 탐색을 위한 전용 영역입니다.
-일반적으로 시스템 바는 화면에 앱과 함께 보입니다.
-영화나 이미지처럼 몰입형 컨텐츠를 제공하는 앱이라면
-방해받지 않고 전체 화면으로 컨텐츠를 즐길 수 있도록 임시로 시스템 바를 숨길 수도 있습니다.</p>
+<p>
+시스템 바는 알림을 표시하고 기기의 상태를 알리거나 앱 사이를 이동하는 역할을 가집니다.
+시스템 바는 보통 앱과 함께 표시됩니다.
+앱이 영화나 그림처럼 몰입형 컨텐츠를 제공하는 경우는 시스템 바를 숨겨 방해받지 않도록 전체 화면 컨텐츠를 즐길 수 있습니다.
+</p>
 
 
 <img src="../media/ui_overview_system_ui.png">
@@ -83,18 +84,24 @@ title: UI 개요
 
 <ol>
 <li>
-<h4>상태 표시줄</h4>
-<p>왼쪽에는 사용자 확인이 필요한 알림을 표시하고 오른쪽에는 시간, 배터리 레벨, 신호 강도 상태 등을 표시합니다.
-상태 표시줄에서 아래로 스와이프해 세부 알림 사항을 볼 수 있습니다.</p>
+<h4>상태 표시줄(Status Bar)</h4>
+<p>
+사용자 확인이 필요한 알림을 왼쪽에, 시간이나 배터리 양, 네트워크 신호 강도 등을 오른쪽에 표시합니다.
+상태 표시줄을 아래로 스와이프하면 세부 알림 사항이 나옵니다.
+</p>
 </li>
 <li>
 <h4>내비게이션 바</h4>
-<p>안드로이드 4.0 폰에 추가된 내비게이션 바는 전통적인 하드웨어 키가 없는 기기에만 나타납니다.
-이전, 홈, 최근 앱 컨트롤이 놓여있고 안드로이드 2.3 이하 버전용으로 만들어진 앱은 메뉴 컨트롤도 보여줍니다.</p>
+<p>
+내비게이션 바는 안드로이드 4.0 폰에 처음 추가되었습니다. 하드웨어 키가 없는 기기에만 표시됩니다.
+내비게이션 바에는 이전, 홈, 최근 앱 컨트롤이 있으며, 안드로이드 2.3 이하 버전 앱의 경우 그 앱의 메뉴를 띄우는 컨트롤도 함께 표시됩니다.
+</p>
 </li>
 <li>
 <h4>결합 바(Combined Bar)</h4>
-<p>타블렛 형태의 기기에서는 상태 표시줄과 내비게이션 바를 하나의 바로 합쳐 화면 아래에 둡니다.</p>
+<p>
+태블릿 형태 기기는 상태 표시줄과 내비게이션 바를 하나로 결합하여 하나의 바로 나타냅니다. 결합 바는 화면 아래에 위치합니다.
+</p>
 </li>
 </ol>
 </div>
