--- a/patterns/settings.html
+++ b/patterns/settings.html
@@ -2,14 +2,14 @@
 layout: default
 title: 설정
 ---
-<p>설정(Settings)은 앱 동작 방식을 사용자 취향에 따라 설정하는 곳입니다. 설정이 사용자에게 유용한 이유는:</p>
+<p>설정(Settings)은 앱 동작 방식을 사용자 취향에 따라 설정하는 곳입니다. 설정이 사용자에게 유용한 이유는 다음과 같습니다:</p>
 
 <ul>
 <li>특정 상황이 발생했을 때 같은 질문을 매번 반복할 필요가 없습니다.
-설정으로 해당 상황을 어떻게 처리할지 미리 결정합니다. 
+설정으로 해당 상황을 어떻게 처리할지 미리 결정해둘 수 있습니다.
 (디자인 원칙: <a href="../get-started/principles.html#decide-for-me">대신 판단하고
 마지막에만 물어보세요</a> 참조)</li>
-<li>설정 기능은 사용자에게 편안함과 함께 통제권을 줍니다. (디자인 원칙:
+<li>설정 기능은 사용자에게 편안함과 통제권을 줍니다. (디자인 원칙:
 <a href="../get-started/principles.html#make-it-mine">내 것으로 만들 수 있도록 해주세요</a> 참조)</li>
 </ul>
 
@@ -19,7 +19,7 @@ title: 설정
 
 <p>설정은 자주 필요하지 않기 때문에 UI에서 중요성이 낮습니다.
 <a href="../patterns/actionbar.html">액션 바</a>에 공간이 남더라도 절대 설정을 액션 버튼으로
-만들지 마세요. 언제나 액션 오버플로우 안에 "설정(영문 앱인 경우, Settings)"이란 이름으로 배치하세요.
+만들지 마세요. 언제나 액션 오버플로우 안에 "설정(영문 앱인 경우, Settings)"이란 이름으로
 "도움말(영문 앱인 경우, Help)"을 제외한 모든 항목 최하단에 배치하세요.</p>
 
 <img src="../media/settings_overflow.png">
@@ -29,15 +29,15 @@ title: 설정
 <h4 id="what-to-make-a-setting">모든 걸 설정으로 만들겠다는 유혹을 피하세요</h4>
 
 <p>설정은 어느 정도 탐색 단계를 거쳐 들어가야 하기 때문에 얼마나 많은 항목이 있든지 간에
-UI의 주요 부분을 전혀 어수선하게 하지 않을 것입니다. 이것은 좋은 이야기처럼 보이지만
+UI의 주요 부분을 전혀 어수선하게 하지 않을 것입니다. 이것은 다행스러운 이야기처럼 보이지만
 어려운 부분이기도 합니다.</p>
 
 <p>설정은&mdash;마치 손님이 오기 전에 깨끗이 보이려고 임시로 물건들을 박아두는 복도 
 벽장처럼&mdash;많은 것들을 넣어 두고 싶은 유혹이 넘실대는 공간입니다.
 많은 시간을 쏟을 곳도 아니기 때문에 어수선한 상태를 합리화하고 무시하기 십상입니다.
-하지만 사용자는 설정에 들어왔을 때&mdash;아무리 자주 안 들어오더라도&mdash;앱
-내의 다른 곳과 같은 경험을 설정에서도 할 거라는 기대를 할 것입니다.
-더 많은 설정은 만드는 것은 더 많은 선택 사항을 의미하며 너무 많은 선택 사항은 감당하기 힘듭니다.</p>
+하지만 사용자는 설정에 들어왔을 때&mdash;아무리 자주 안 들어오더라도&mdash;설정에서도
+앱 내 다른 곳과 같은 경험을 하길 기대할 것입니다.
+많은 설정은 많은 선택 사항을 만드는 것을 의미하며 너무 많은 선택 사항은 감당하기 힘듭니다.</p>
 
 <p>그러므로 어렵다고 "그냥 설정으로 빼자"고 결론 내고서 결과물에 대한 판단과 논의를 그냥 지나치지 마세요.
 설정에 추가할 것을 고려 중인 항목이 있다면 다음 조건을 충족하는지 확인하세요:</p>
@@ -61,7 +61,7 @@ UI의 주요 부분을 전혀 어수선하게 하지 않을 것입니다. 이것
 <h4 id="group-settings">여전히 설정이 많다면 관련된 설정끼리 그룹으로 묶으세요</h4>
 
 <p>사람이 단기 기억으로 기억할 수 있는 항목 갯수는 7&plusmn;2개라고 합니다.
-(상단 기준을 적용한 후에도) 설정에 10개 이상의 리스트를 표시하고 있다면
+(상단 표의 기준을 적용한 후에도) 설정에 10개 이상의 리스트를 표시하고 있다면
 사용자는 해당 항목을 찾고 이해하고 처리하기가 더 힘들 것입니다.</p>
 
 <p>이 문제는 설정의 일부 혹은 전체를 그룹으로 나누어서 하나의 긴 리스트를 복수의
@@ -86,8 +86,9 @@ UI의 주요 부분을 전혀 어수선하게 하지 않을 것입니다. 이것
   </div>
 </div>
 
-<p>설정 그룹화는 정밀 과학은 아니지만 앱 전체 설정 갯수에 따라 어떻게 접근하는게 좋을지에 대한
-제안 사항이 있습니다.</p>
+<p>설정 그룹화가 정밀 과학인 것은 아니지만,
+앱 전체 설정 갯수에 따라 어떻게 접근하는 것이 좋을지
+다음의 몇가지 제안 사항이 있습니다.</p>
 
 <div class="vspace size-1">&nbsp;</div>
 
@@ -113,11 +114,11 @@ UI의 주요 부분을 전혀 어수선하게 하지 않을 것입니다. 이것
   <div class="layout-content-col span-11">
 
 <p>한 두개의 섹션 분리선으로 관련 설정을 그룹화해보세요. 
-어떤 "싱글톤"(다른 설정과 관련도 없고 섹션 분리선 아래 그룹화 될 수도 없는 설정)이 있다면
+어떤 "싱글톤"(다른 설정과 관련도 없고 섹션 분리선 아래 그룹화할 수도 없는 설정)이 있다면
 다음과 같이 다루어주세요:</p>
 
 <ul>
-<li>중요한 설정이 포함되어 있다면
+<li>중요한 설정을 포함하고 있다면
 섹션 분리선을 넣지 말고 가장 윗쪽에 나열해주세요.</li>
 <li>그렇지 않다면 "기타(OTHER)"로 이름지은 섹션 분리선에 포함시켜 중요도에 따라
 아래에 나열해주세요.</li>
@@ -139,8 +140,9 @@ UI의 주요 부분을 전혀 어수선하게 하지 않을 것입니다. 이것
 <p>또한 리스트를 줄이기 위해 다음 사항을 따라주세요:</p>
 
 <ul>
-<li>만약 특정한 2개 혹은 그 이상의 설정이 주로 파워 유저가 사용한다면
-주 설정 화면에서 "고급" 부 화면으로 해당 설정을 이동하세요. 그 항목으로 이동할 수 있도록
+<li>만약 특정한 2개 혹은 그 이상의 설정을 거의 고급 사용자만 사용하고 있다면
+주 설정 화면에서 "고급" 부 화면으로 해당 설정을 이동하세요.
+그 항목으로 이동할 수 있도록
 액션 오버플로우에 "고급"이라는 이름의 항목을 배치하세요.</li>
 <li>다른 설정에는 영향을 주지 않지만 서로 영향을 주는 두 설정 항목을 찾아내세요.
 이 섹션 밑에서 설명될 디자인 패턴을 사용해 한 설정 항목으로 항목들을 통합해 보세요.
@@ -159,7 +161,7 @@ UI의 주요 부분을 전혀 어수선하게 하지 않을 것입니다. 이것
   <div class="layout-content-col span-11">
 
 <p>4개 이상의 관련 설정이 있는 경우 부 화면으로 그룹화하세요.
-그 후 리스트 크기를 줄이도록 위에서 제안한 방법을 사용하세요.</p>
+그 후 리스트 크기가 줄어들도록 위에서 제안한 방법을 사용하세요.</p>
 
   </div>
 </div>
@@ -171,7 +173,7 @@ UI의 주요 부분을 전혀 어수선하게 하지 않을 것입니다. 이것
   <div class="layout-content-col span-3">
 
 <h4>체크박스</h4>
-<p>해당 설정이 선택/비선택이 분명할 때 이 패턴을 사용하세요.</p>
+<p>해당 설정의 선택/비선택이 분명할 때 이 패턴을 사용하세요.</p>
 
   </div>
   <div class="layout-content-col span-10">
@@ -248,8 +250,8 @@ UI의 주요 부분을 전혀 어수선하게 하지 않을 것입니다. 이것
 
 <h4>리스트 부 화면</h4>
 <p>비슷한 수준의 항목 목록을 담고 있는 단순한 설정이나 설정 분류에 이 패턴을 사용하세요.</p>
-<p>레이블에는 항목의 이름을 제공하고 보조 텍스트는 상태를 표시하는데 사용할 수 있습니다.
-(이 예제에서는, 레이블 우측에 아이콘으로 상태 표시를 보강하고 있습니다)
+<p>레이블에는 항목 이름을 제공하고 보조 텍스트는 상태를 표시하는데 사용할 수 있습니다.
+(이 예제에서는 레이블 우측에 아이콘으로 상태 표시를 보강하고 있습니다)
 리스트와 연관된 액션을 리스트 자체에 넣는 대신 액션 바에 엮이도록 했습니다.</p>
 
   </div>
@@ -264,10 +266,10 @@ UI의 주요 부분을 전혀 어수선하게 하지 않을 것입니다. 이것
   <div class="layout-content-col span-3">
 
 <h4>마스터 온/오프 스위치</h4>
-<p>분류 전체 설정을 켜거나 꺼야 하는 동작 방식이 필요할 때 이 패턴을 사용하세요.</p>
+<p>분류 안 전체 설정을 켜거나 끄는 동작 방식이 필요할 때 이 패턴을 사용하세요.</p>
 <p>온/오프 스위치는 부 화면 액션 바의 첫 항목으로 배치합니다.
 스위치를 끄면 리스트 내 항목들 또한 없애고 왜 리스트가 비었는지 설명하는 텍스트로 교체합니다.
-이 스위치가 켜져야 어떤 액션들을 수행할 수 있다면 그 액션들 또한 비활성화됩니다.</p>
+이 스위치가 켜져야 어떤 다른 액션을 수행할 수 있다면 그 액션들 또한 비활성화합니다.</p>
 
   </div>
   <div class="layout-content-col span-10">
@@ -284,7 +286,7 @@ UI의 주요 부분을 전혀 어수선하게 하지 않을 것입니다. 이것
 
 <p>또한 부 화면으로 이동하는 메뉴 항목에도 마스터 온/오프 스위치를 같이 둘 수 있습니다.
 하지만 사용자가 한번 설정한 후에는 부 화면에 접근할 필요가 별로 없고 해당 스위치를
-켜고 끄는 일이 더 많은 경우에만 이렇게 할 수 있습니다.</p>
+켜고 끄는 일이 더 많은 경우에만 이렇게 하세요.</p>
 
   </div>
   <div class="layout-content-col span-10">
@@ -318,10 +320,10 @@ UI의 주요 부분을 전혀 어수선하게 하지 않을 것입니다. 이것
 <h4>의존성</h4>
 <p>다른 설정 값에 따라 사용 가능 여부가 변하는 설정에 이 패턴을 사용하세요.</p>
 <p>사용 불가 설정은 아무 들여쓰기 없이 하단에 의존성을 표기합니다.
-만약 설정에 상태 줄이 있다면, "사용 불가"를 표시하고 사용 불가 이유가 명확하지 않다면
-상태에 간략한 설명을 포함합니다.</p>
+만약 설정에 상태 줄이 있다면, "사용 불가"를 표시하고
+사용 불가 이유가 명확하지 않다면 상태로 간략한 설명을 포함합니다.</p>
 <p>해당 설정이 3개 이상의 설정에 의존해 있다면 마스터 온/오프 스위치가 있는 부 화면을
-사용하는 것을 고려해 메인 설정 화면이 사용 불가 항목으로 지저분해지지 않도록 해주세요.</p>
+사용할 수 있을지 고려해 주 설정 화면이 사용 불가 항목으로 지저분해지지 않도록 해주세요.</p>
 
   </div>
   <div class="layout-content-col span-10">
@@ -334,19 +336,20 @@ UI의 주요 부분을 전혀 어수선하게 하지 않을 것입니다. 이것
 <h2 id="defaults">기본 값(Defaults)</h2>
 
 <p>각 설정의 기본 값을 선택하는데 있어 세심한 주의를 기울이세요.
-설정은 앱의 동작 방식을 결정하고 여러분의 선택이 사용자들이 받는 앱의 첫 인상의 원인이 될 것이기
-때문입니다. 설정을 변경할 수 있다 하더라도 사용자는 초기 상태로도 쓸만하기를 기대하고 있습니다.
-다음의 질문이 (해당한다면) 결정에 도움이 될 수 있습니다:</p>
+설정은 앱의 동작 방식을 결정하고 여러분의 선택에 따라
+사용자들이 받는 앱의 첫 인상이 결정될 것이기 때문입니다.
+사용자는 설정을 변경할 수 있다 해도 초기 상태로도 쓸만하길 기대하고 있습니다.
+다음의 질문이 (해당하는 상황이라면) 결정에 도움이 될 수 있습니다:</p>
 
 <ul>
-<li>어떤걸 기본 값이 없다면 대부분의 사용자들이 선택할까요?</li>
+<li>어떤걸 기본 값이 없을 때 사용자 대부분이 선택할까요?</li>
 <li>어떤게 더 중립적이거나 중도적일까요?</li>
 <li>어떤게 가장 위험성이 적으면서도 무난하고 평범할까요?</li>
 <li>어떤게 배터리도 덜 먹고 패킷 사용량도 적을까요?</li>
 <li>어떤게 디자인 원칙
 <a href="../get-started/principles.html#never-lose-my-stuff">내 자료 날아가면 안돼요</a>를 가장 잘 지원할까요?</li>
 <li>어떤게 디자인 원칙
-<a href="../get-started/principles.html#interrupt-only-if-important">>정말 중요할 때만 날 찾으세요</a>를 잘 지원할까요?</li>
+<a href="../get-started/principles.html#interrupt-only-if-important">정말 중요할 때만 날 찾으세요</a>를 잘 지원할까요?</li>
 </ul>
 
 <h2 id="writing">작성 가이드라인</h2>
@@ -354,7 +357,7 @@ UI의 주요 부분을 전혀 어수선하게 하지 않을 것입니다. 이것
 <h4>깔끔하고 간결한 제목을 붙이세요</h4>
 
 <p>설정에 좋은 레이블을 붙이는 것은 공간이 매우 부족하기 때문에 꽤 어려운 일입니다.
-단지 한 줄만 사용가능하며초소형 기기에서는 엄청나게 작기 때문입니다.
+단지 한 줄만 사용가능한데다 초소형 기기에서는 엄청나게 짧기 때문입니다.
 레이블을 간결하고 의미있고 쉽게 찾을 수 있도록 다음 지침을 따르도록 하세요:</p>
 
 <ul>
@@ -366,22 +369,23 @@ UI의 주요 부분을 전혀 어수선하게 하지 않을 것입니다. 이것
 <li>이와 비슷하게, "~하기" 같은 단어(영문 앱인 경우, "setting"/"settings")로 레이블을 끝내지 마세요.
 이미 표현에 다 함축되어 있습니다.</li>
 <li>설정이 그룹의 한 부분이라면 섹션 분리자나 부 화면 제목에 표시된 단어는 반복하지 마세요.</li>
-<li>"금지"와 같은 부정적인 단어로 레이블을 끝내는 것을 피해주세요. (영문 앱인 경우,
+<li>"않음", 금지"와 같은 부정적인 단어로 레이블을 끝내는 것을 피해주세요. (영문 앱인 경우,
 "Don't"나 "Never"와 같은 단어로 레이블을 시작하는 것을 피해주세요.)
-예를 들면, "허용 금지(Don't allow)"는 "차단(Block)"으로 바꿔 표현할 수 있습니다.</li>
+예를 들면, "허용하지 않음(Don't allow)"는 "차단(Block)"으로 바꿔 표현할 수 있습니다.</li>
 <li>대상 사용자 층이 폭넓게 이해하고 있는 경우를 제외하고 기술 용어는 가능한 한 피해주세요.
 기반 기술보다는 설정의 목적을 전달할 수 있는 일반적인 동사와 명사를 사용하세요.</li>
 <li>사용자를 지칭하지 마세요. 예를 들어 알림을 켜거나 끄는 설정이라면 레이블을 "내게 알리기(Notify me)"
 대신 "알림(Notifications)"으로 지정하세요.</li>
 </ul>
 
-<p>설정에 붙일 레이블을 결정했다면 레이블이 어디서나 잘 보일지
-세로 화면의 <a href="../style/metrics-grids.html">LDPI 핸드셋</a>에서 확인해주세요.</p>
+<p>설정에 붙일 레이블을 결정했다면 레이블이 어떤 기기에서든 잘 보일 것인지
+세로 화면의 <a href="../style/metrics-grids.html">LDPI 핸드셋</a>으로 확인해주세요.</p>
 
 <h4>하단 보조 텍스트로 상태를 표시하세요, 설명 말구요&hellip;</h4>
 
-<p>아이스크림 샌드위치 이전에 종종 레이블을 설명하거나 지침을 제공하기 위해 
-레이블 밑 보조 텍스트를 표시했습니다. 아이스크림 샌드위치부터 상태를 표시하는데 보조 텍스트를 사용합니다.
+<p>아이스크림 샌드위치 이전에는 종종 레이블을 설명하거나 지침을 제공하기 위해 
+레이블 밑 보조 텍스트를 표시했습니다.
+아이스크림 샌드위치부터는 상태를 표시하는데 보조 텍스트를 사용합니다.
 </p>
 
 <div class="layout-content-row">
@@ -438,24 +442,24 @@ UI의 주요 부분을 전혀 어수선하게 하지 않을 것입니다. 이것
 사용자들이 매우 고마워할 것입니다.</li>
 </ul>
 
-<h4>&hellip;체크박스 설정이 아니라면 말이죠</h4>
+<h4>&hellip;체크박스 설정은 빼고 말이죠</h4>
 <p>보조 텍스트를 상태로 사용하는데 있어서 한가지 중요한 예외가 있습니다: 체크박스 설정입니다.
 다시 말해 보조 텍스트를 상태가 아니라 설명에 사용하세요.
-체크박스 밑 상태 설명은 불필요한데 체크박스 자신이 이미 설명하고 있기 때문입니다.
+체크박스 밑 상태 설명은 불필요한 이유는 체크박스 자체가 이미 상태를 설명하고 있기 때문입니다.
 체크박스 설정 밑에&mdash;다른 컨트롤과 달리&mdash;설명을 두는게 좋은 이유는 체크박스 설정은
 추가 정보를 제공하기 위해 대화 상자를 표시하거나 다른 화면으로 이동하지 않기 때문입니다.</p>
 
 <p>그렇긴 하지만 만약 체크박스 설정 레이블 자신이 충분히 목적을 설명하고 있다면
-설명 또한 제공할 필요가 없습니다. 필요할 경우 하나만 포함하세요.</p>
+설명 또한 제공할 필요가 없습니다. 필요할 경우에만 포함하세요.</p>
 
 <p>체크박스 설명을 작성할 때 다음 지침에 따라주세요:</p>
 <ul>
 <li>한 문장으로 표기하고 마침표를 사용하지 마세요.</li>
-<li>설정이 체크되었을 경우 무슨 일이 일어날지 명령문 형식으로 표현하세요. 예제:
+<li>설정을 체크하면 무슨 일이 일어날지 명령문 형식으로 표현하세요. 예제:
 "데이터 교환을 허용합니다" 대신 "데이터 교환 허용".</li>
 <li>레이블에 이미 나타난 단어를 반복 표시하는 것을 피하세요.</li>
-<li>설정을 이해시키는게 필요하지 않다면 사용자를 지칭하지 마세요.</li>
-<li>사용자를 지칭해야만 한다면, 1인칭("나") 대신 2인칭("당신")으로 지칭하세요.
+<li>설정을 이해하는데 꼭 필요하지 않다면 사용자를 지칭하지 마세요.</li>
+<li>사용자를 지칭해야만 한다면 1인칭("나") 대신 2인칭("당신")으로 지칭하세요.
 안드로이드가 사용자에게 말하는 것이고 사용자를 대신하지 않습니다.</li>
 </ul>
 
@@ -535,14 +539,14 @@ UI의 주요 부분을 전혀 어수선하게 하지 않을 것입니다. 이것
     <thead>
       <tr>
         <th class="label">
-        화면 끄기
+        절전 모드
         </th>
       </tr>
     </thead>
     <tbody>
       <tr>
         <td class="secondary-text">
-        사용 10분 후
+        10분 이상 동작이 없을 때
         </td>
       </tr>
     </tbody>
@@ -552,8 +556,8 @@ UI의 주요 부분을 전혀 어수선하게 하지 않을 것입니다. 이것
   <div class="layout-content-col span-5">
 
 <p>이 다중 선택 설정의 레이블을 더 친절하게 바꾸고 상태 설명문도 바꾸었습니다.
-선택 값 "10분"에 몇가지 설명 단어를 덧붙였는데 "10분"이라는 표현이 "10분 동안 화면 끄기"로
-이해될 수도 있기 때문입니다/</p>
+선택 값 "10분"에 몇가지 설명 단어를 덧붙였는데 "10분"이라는 표현은
+"10분 동안 절전 모드"로 이해될 수도 있기 때문입니다.</p>
 
   </div>
 </div>
@@ -606,7 +610,7 @@ UI의 주요 부분을 전혀 어수선하게 하지 않을 것입니다. 이것
   <div class="layout-content-col span-5">
 
 <p>이 설정은 사용자가 화면 잠금 타입을 정하고 설정할 수 있는 일련의 부 화면으로 이동합니다.
-"설정"이라는 단어를 레이블에서 없앴고, 현재 사용자가 지정해 둔 화면 잠금 타입으로 설명을
+"설정"이라는 단어를 레이블에서 없앴고 현재 사용자가 지정해 둔 화면 잠금 타입으로 설명을
 대체했습니다. 화면 잠금을 설정하지 않은 경우에는 보조 텍스트로 "없음"을 표시합니다.</p>
 
   </div>
@@ -659,12 +663,12 @@ UI의 주요 부분을 전혀 어수선하게 하지 않을 것입니다. 이것
   </div>
   <div class="layout-content-col span-5">
 
-<p>이 체크박스 설정에서는&mdash;기술 전문 용어이지만&mdash;"NFC" 레이블을 유지시켰습니다.
+<p>이 체크박스 설정에서는&mdash;전문 기술 용어지만&mdash;"NFC" 레이블을 유지시켰습니다.
 그 이유는: (1) 깔끔하고 간결한 다른 표현을 찾을 수 없었고,
-(2) 차후 몇 년 안에 이 약자를 친숙하게 받아들일 사용자가 극적으로 늘어날 것이라 예상했기 때문입니다.</p>
+(2) 이 약자를 친숙하게 받아들일 사용자가 차후 몇 년 안에 극적으로 늘어날 것이라 예상했기 때문입니다.</p>
 <p>하지만 설명문은 재작성했습니다. 전보다 훨씬 덜 기술적이지만
 어떻게 그리고 왜 NFC를 사용할지 더 잘 알려줍니다. NFC가 무엇의 약자인지는 포함하지 않았는데
-대부분 사용자에게는 의미가 없고 많은 공간만 차지하게 되기 때문입니다.</p>
+대부분 사용자에게는 의미가 없고 공간만 많이 차지하게 되기 때문입니다.</p>
 
   </div>
 </div>
@@ -674,6 +678,6 @@ UI의 주요 부분을 전혀 어수선하게 하지 않을 것입니다. 이것
 <li><p>설정의 각 항목이 기준에 따라 해당 위치에 어울리는지 확인하세요.</p></li>
 <li><p>7개 이상의 항목이 있다면 설정을 그룹화 할 수 있는 방법을 찾아보세요.</p></li>
 <li><p>사용자가 학습 곡선에 맞닿지 않도록 어디서나 통용되는 디자인 패턴을 사용하세요.</p></li>
-<li><p>안전하고, 중립적이고, 대부분의 사용자에게 맞는 기본 값을 선택하세요.</p></li>
+<li><p>안전하고 중립적이고 대부분의 사용자에게 잘 맞는 기본 값을 선택하세요.</p></li>
 <li><p>각 설정에 깔끔하고 간결한 레이블과 적절한 보조 텍스트를 달아주세요.</p></li>
 </ul>
