빠진 번역을 추가하고 표현을 고침
Don't hardcode links to other apps 섹션 추가
윈도우 폰 7 -> 윈도 폰 7 (MS 용어)
iOS의 back 버튼 '뒤로가기' -> '뒤로' (애플 용어)

--- a/patterns/pure-android.html
+++ b/patterns/pure-android.html
@@ -34,7 +34,7 @@ UI 요소의 테마를 입맛에 맞게 고치실 때는 다른 플랫폼의 관
   <div class="layout-content-col span-8">
 
     <img src="../media/migrating_ui_elements.png"><div class="figure-caption">
-      안드로이드와 iOS, 윈도우 폰 7의 UI 요소.
+      안드로이드와 iOS와 윈도 폰 7의 UI 요소.
     </div>
 
   </div>
@@ -47,16 +47,16 @@ UI 요소의 테마를 입맛에 맞게 고치실 때는 다른 플랫폼의 관
 <div class="layout-content-row">
   <div class="layout-content-col span-5">
 
-<h4>플랫폼 제공 아이콘을 그대로 가져오지 마세요</h4>
-<p>각 플랫폼마다 공유, 새 문서나 삭제 등 자주 사용하는 중요 아이콘을 제공합니다.</p>
-<p>안드로이드로 앱을 이식할 때에는 그러한 플랫폼 아이콘을 그에 대응하는 안드로이드 아이콘으로 바꾸세요.</p>
-<p>앱에 사용할 수 있는 다양한 아이콘을 안드로이드 SDK에서 찾을 수 있습니다.</p>
+<h4>다른 플랫폼의 아이콘을 그대로 가져오지 마세요</h4>
+<p>각 플랫폼마다 공유, 새 문서, 삭제와 같이 널리 쓰이는 기능에 맞는 아이콘을 제공합니다.</p>
+<p>안드로이드로 앱을 이식할 때는 다른 플랫폼의 아이콘을 대응하는 안드로이드 아이콘으로 바꾸세요.</p>
+<p>앱에 사용할 수 있는 다양한 아이콘을 <a href="../downloads/index.html">다운로드</a>에서 찾을 수 있습니다.</p>
 
   </div>
   <div class="layout-content-col span-8">
 
     <img src="../media/migrating_icons.png"><div class="figure-caption">
-      안드로이드와 iOS, 윈도우 폰 7의 아이콘.
+      안드로이드와 iOS와 윈도 폰 7의 아이콘.
     </div>
 
   </div>
@@ -70,8 +70,8 @@ UI 요소의 테마를 입맛에 맞게 고치실 때는 다른 플랫폼의 관
   <div class="layout-content-col span-5">
 
 <h4>탭 바를 화면 하단에 두지 마세요</h4>
-<p>다른 플랫폼에서는 앱의 여러 뷰 사이를 전환하기 위해 하단 탭 바를 사용합니다. 안드로이드는 탭을 화면 위쪽 액션 바에 표시하는 것이 관례입니다. 추가로, 분리된 액션 바에 액션을 표시하기 위해 하단 바를 사용할 수도 있습니다.</p>
-<p>안드로이드 플랫폼의 다른 앱들과 일관성 있는 경험을 위해, 또한 뷰 전환과 액션을 혼동하지 않도록 하기 위해서 반드시 이 지침을 따르셔야 합니다.</p>
+<p>다른 플랫폼에서는 앱의 여러 뷰 사이를 전환하기 위해 하단 탭 바를 사용합니다. 안드로이드는 탭을 화면 위쪽 액션 바에 표시하는 것이 관례입니다. 추가로 분리된 액션 바에 액션을 표시하기 위해 하단 바를 사용할 수는 있습니다.</p>
+<p>안드로이드 플랫폼의 다른 앱과 일관성 있는 경험을 주고, 뷰 전환과 액션이 헷갈리지 않게 하기 위해 이 지침을 따라 주세요.</p>
 <p>뷰 전환을 위해 액션 바를 올바르게 사용하는 방법은 <a href="actionbar.html">액션 바</a>에서 보실 수 있습니다.</p>
 
   </div>
@@ -84,19 +84,42 @@ UI 요소의 테마를 입맛에 맞게 고치실 때는 다른 플랫폼의 관
   </div>
 </div>
 
+<div class="layout-content-row">
+  <div class="layout-content-col span-5">
+
+<h4>코드로 직접 다른 앱과 연결하지 마세요</h4>
+<p>만들려는 앱이 다른 앱의 기능을 이용하면 좋은 경우가 있습니다.
+앱이 만든 컨텐츠를 SNS나 메세지 앱으로 공유하고 싶거나 웹 링크의 컨텐츠를 웹 브라우저에서 열어보고 싶을 때가 그런 경우입니다.
+이렇게 하려고 어떤 앱으로든 코드로 직접 연결하지는 마세요.
+대신 그 요청을 처리할 수 있는 모든 앱을 나열하는 액티비티 선택 창을 띄우기 위해 안드로이드의 인텐트 API를 쓰세요.
+사용자는 좋아하는 앱으로 작업할 수 있습니다.
+공유는 최근에 사용한 공유 대상을 빠르게 사용할 수 있도록 특별히 액션 바의 <em>공유 액션 프로바이더</em>를 사용할 수 있습니다.</p>
+
+  </div>
+  <div class="layout-content-col span-8">
+
+    <img src="../media/migrating_intents.png">
+    <div class="figure-caption">
+      액티비티 선택 창이나 액션 바의 <em>공유 액션 프로바이더</em>를 활용해 다른 앱과 연결하세요.
+    </div>
+
+  </div>
+</div>
+
+<div class="vspace size-2">&nbsp;</div>
 
 <div class="layout-content-row">
   <div class="layout-content-col span-5">
 
 <h4>액션 바의 뒤로 가기 버튼에 레이블을 달지 마세요</h4>
 <p>다른 플랫폼에서는 사용자가 애플리케이션의 상위 계층으로 이동할 수 있도록 하기 위해 레이블이 붙은 명시적인 뒤로 가기 버튼을 사용합니다. 안드로이드에서는 그와 달리, 상위 계층으로 이동할 때는 주 액션 바의 앱 아이콘을, 일시적인 이동을 할 때는 내비게이션 바의 뒤로 가기 버튼을 사용합니다. 자세한 내용은 <a href="navigation.html">내비게이션</a> 패턴을 참고하세요.</p>
-<p>플랫폼 전반에서 일관성 있는 내비게이션 경험을 제공할 수 있도록 이 지침을 따르십시오.</p>
+<p>플랫폼 전반에서 일관성 있는 내비게이션 경험을 제공할 수 있도록 이 지침을 따라 주세요.</p>
 
   </div>
   <div class="layout-content-col span-8">
 
     <img src="../media/migrating_ios_galleries.png"><div class="figure-caption">
-      상위 표시가 달린 안드로이드 액션 바와 레이블이 붙은 iOS "뒤로 가기" 버튼 비교.
+      상위 표시가 달린 안드로이드 액션 바와 레이블이 붙은 iOS "뒤로" 버튼 비교.
     </div>
 
   </div>
