issue #67 navigation->이동

--- a/patterns/app-structure.html
+++ b/patterns/app-structure.html
@@ -26,7 +26,7 @@ Gmail이나 Google Play는 다양한 데이터 뷰가 계층 구조로 조합되
 
 <p>
 일반적인 안드로이드 앱은 최상위 수준의 뷰와 세부/편집 뷰로 구성됩니다.
-탐색 계층(navigation hierachy)이 깊고 복잡해지면 카테고리 뷰가 최상위 수준과 세부 뷰들을 연결합니다.
+이동 경로(navigation hierachy)가 깊고 복잡해지면 카테고리 뷰가 최상위 수준과 세부 뷰를 연결합니다.
 </p>
 
 
@@ -77,10 +77,10 @@ Gmail이나 Google Play는 다양한 데이터 뷰가 계층 구조로 조합되
 <div class="layout-content-row">
   <div class="layout-content-col span-5">
 
-<h4>컨텐츠를 전면에</h4>
+<h4>컨텐츠를 앞으로</h4>
 <p>
 많은 앱이 컨텐츠 표시에 집중합니다.
-탐색만 하는 화면을 만들지 말고 시작 화면 중앙에 컨텐츠를 두어 사용자가 앱의 알맹이를 바로 얻을 수 있도록 하세요.
+이동만 할 수 있는 화면을 만들지 말고 시작 화면 중앙에 컨텐츠를 두어 사용자가 앱의 알맹이를 바로 보도록 하세요.
 데이터 타입과 화면 크기에 적합하고 시각적으로 두각시킬 수 있는 레이아웃을 선택하세요.
 </p>
 
@@ -100,9 +100,9 @@ Gmail이나 Google Play는 다양한 데이터 뷰가 계층 구조로 조합되
 <div class="layout-content-row">
   <div class="layout-content-col span-5">
 
-<h4>탐색과 액션을 위한 액션 바 설정</h4>
+<h4>이동과 액션을 위한 액션 바 설정</h4>
 <p>
-앱의 모든 화면은 일관된 탐색과 중요한 액션의 표시를 위해 액션 바를 표시해야 합니다.
+앱의 모든 화면은 일관성 있는 이동과 중요한 액션의 표시를 위해 액션 바를 표시해야 합니다.
 </p>
 <p>
 최상위 수준에서 액션 바를 적용할 때 다음을 특별히 주의해야 합니다.
@@ -164,12 +164,12 @@ Gmail이나 Google Play는 다양한 데이터 뷰가 계층 구조로 조합되
 
 <p>
 일반적인 깊이 있는 데이터 기반 앱은 조직적인 카테고리를 통해 데이터를 보고 조작할 수 있는 상세 뷰로 이동하고자 합니다.
-카테고리로 앱을 한눈에 보이게 유지하여 사용자가 탐색 단계를 인지하는 부담을 덜어 주세요.
+카테고리로 앱을 한눈에 보이게 유지하여 사용자가 이동 경로를 파악하기 쉽도록 해 주세요.
 </p>
 
 <p>
 앱의 최상위 단계에서 상세 뷰로 도달하기 위해 거쳐야 할 단계는 보통 앱의 컨텐츠 구조에 영향을 받지만,
-탐색할 때 인지 부담을 덜어줄 수 있는 여러가지 방법이 있습니다.
+이동 경로를 짧게 유지하는 여러가지 방법이 있습니다.
 </p>
 
 <h4>탭을 이용해 카테고리 선택과 데이터 표현을 합쳐주세요</h4>
@@ -177,7 +177,7 @@ Gmail이나 Google Play는 다양한 데이터 뷰가 계층 구조로 조합되
 <p>
 카테고리가 유사하거나 수가 적다면 탭을 사용하는 것이 정답일 수 있습니다.
 탭은 계층 수준을 없애고 사용자가 데이터에 주목하게 하는 이점이 있습니다.
-데이터가 많은 카테고리들을 좌우로 이동하여 탐색하는 것은 명시적 탐색 단계라기보다는 일반적인 브라우즈 경험과 비슷합니다.
+데이터가 많은 카테고리를 좌우로 움직여 이동하는 것은 명시적인 이동 방법이라기보다는 일반적인 브라우즈 경험과 비슷합니다.
 </p>
 
 
@@ -279,9 +279,9 @@ Music은 사용자가 카테고리 뷰(앨범)에서 데이터 항목(노래)의
 </div>
 
 
-<h4>상세 뷰를 효과적으로 탐색하기</h4>
+<h4>상세 뷰 사이를 효과적으로 이동하기</h4>
 
-<p>사용자가 순차적으로 여러 항목을 보고 싶어 할 것 같으면 상세 뷰 안에서 탐색할 수 있도록 하세요.
+<p>사용자가 순차적으로 여러 항목을 보고 싶어 할 것 같으면 상세 뷰 안에서 다른 항목으로 이동할 수 있도록 하세요.
 그렇게 하기 위해 뷰 스와이프나 필름 스트립 같은 다른 방법을 도입하세요.</p>
 
 
@@ -306,15 +306,15 @@ Music은 사용자가 카테고리 뷰(앨범)에서 데이터 항목(노래)의
 <p>시작 화면에 유용한 컨텐츠를 표현할 방법을 찾으세요.</p>
 </li>
 <li>
-<p>일관된 탐색을 위해 액션 바를 사용하세요.</p>
+<p>일관성 있는 이동을 위해 액션 바를 사용하세요.</p>
 </li>
 <li>
-<p>수평적인 탐색과 숏컷을 사용하여 계층을 얕게 유지하세요.</p>
+<p>수평적인 탐색과 숏컷을 사용하여 이동 경로를 짧게 유지하세요.</p>
 </li>
 <li>
-<p>데이터의 묶음에 사용자가 명령할 수 있게 다중 선택을 지원하세요.</p>
+<p>데이터의 묶음에 액션을 선택할 수 있게 다중 선택을 지원하세요.</p>
 </li>
 <li>
-<p>여러 상세 항목 사이를 빨리 탐색하기 위해 스와이프 뷰 등을 사용하세요.</p>
+<p>여러 상세 항목 사이에서 빠르게 이동하기 위해 스와이프 뷰 등을 사용하세요.</p>
 </li>
 </ul>
