patterns/* 일부 리뷰 및 수정.

--- a/patterns/compatibility.html
+++ b/patterns/compatibility.html
@@ -5,11 +5,11 @@ title: 하위 호환성
 <p>Android 3.0 에서 포함된 중요 변경 사항은 다음과 같습니다:</p>
 
 <ul>
-<li>가상 내비게이션 키(Back, Home, 최근 액티비티)의 도입에 따른,
-  하드웨어 내비게이션 키(Back, Menu, Search, Home)의 이용 배제.</li>
+<li>가상 내비게이션 키(이전, 홈, 최근 앱)의 도입에 따른
+  하드웨어 내비게이션 키(이전, 메뉴, 검색, 홈)의 이용 배제.</li>
 <li>액션 바 메뉴를 위한 강력한 패턴.</li>
 </ul>
-<p>안드로이드 4.0은 태블릿을 위해 도입된 이 사항들을 폰 플랫폼에도 적용했습니다.</p>
+<p>안드로이드 4.0은 태블릿을 위해 도입한 이러한 사항들을 폰 플랫폼에도 적용했습니다.</p>
 
 
 <h2 id="older-hardware">이전의 하드웨어와 앱에 안드로이드 4.0 적용하기</h2>
@@ -19,10 +19,10 @@ title: 하위 호환성
   <div class="layout-content-col span-6">
 
 <h4>가상 내비게이션 키를 갖는 폰</h4>
-<p>안드로이드 3.0 이후 버전을 위해 작성된 안드로이드 앱은 액션 바에 메뉴를 표시합니다.
+<p>안드로이드 3.0 및 이후 버전을 위해 작성된 안드로이드 앱은 액션 바에 메뉴를 표시합니다.
 액션 바가 좁아 다 들어갈 수 없는 메뉴나 꼭 보여야 할 만큼 중요치 않은 메뉴들은
-오버플로 메뉴를 통해 표시합니다.</p>
-<p>사용자는 액션 바에서 오버플로 메뉴를 터치해서 해당 메뉴들에 접근할 수 있습니다.</p>
+최상위에 나타나 있는 액션 오버플로우 메뉴를 통해 표시합니다.</p>
+<p>사용자는 액션 바에서 액션 오버플로우를 터치해서 해당 액션에 접근할 수 있습니다.</p>
 
   </div>
   <div class="layout-content-col span-7">
@@ -36,9 +36,9 @@ title: 하위 호환성
   <div class="layout-content-col span-6">
 
 <h4>하드웨어 내비게이션 키를 갖는 폰</h4>
-<p>기존의 하드웨어 내비게이션 키를 갖는 안드로이드 폰은 화면 하단에 가상 내비게이션 버튼을 표시하지 않습니다.
-대신, 하드웨어 메뉴 버튼을 통해 오버플로 메뉴를 사용할 수 있습니다. 메뉴 버튼을 누르면
-화면의 아래쪽에 표시된다는 점을 제외하면 기존 예와 동일한 스타일의 메뉴가 나타납니다.</p>
+<p>기존의 하드웨어 내비게이션 키를 갖는 안드로이드 폰은 가상 내비게이션 버튼을 화면 하단에 표시하지 않습니다.
+그 대신 하드웨어 메뉴 키로 오버플로우 메뉴를 사용할 수 있습니다. 메뉴 키를 누르면
+메뉴가 화면 아래쪽에 표시된다는 점을 제외하면 위의 예와 동일한 스타일의 메뉴가 나타납니다.</p>
 
   </div>
   <div class="layout-content-col span-7">
@@ -52,8 +52,8 @@ title: 하위 호환성
   <div class="layout-content-col span-6">
 
 <h4>가상 내비게이션 키를 갖는 폰에서의 기존 앱</h4>
-<p>안드로이드 2.3 이전 버전에서 만들어진 앱을 가상 내비게이션 키를 갖는 폰에서 실행한다면,
-오버플로 메뉴는 가상 내비게이션 바의 오른쪽에 나타납니다.
+<p>안드로이드 2.3 및 이전 버전을 위해 만들어진 앱을 가상 내비게이션 키를 갖는 폰에서 실행하면
+액션 오버플로우 컨트롤은 가상 내비게이션 바의 오른쪽에 나타납니다.
 해당 메뉴를 터치하면 기존 안드로이드 메뉴 스타일의 메뉴를 표시합니다.
 
   </div>
