--- a/patterns/settings.html
+++ b/patterns/settings.html
@@ -44,14 +44,22 @@ title: 설정
 
 <img src="../media/settings_flowchart.png">
 
-<!--
-<p>1. 정말 사용자 선택 사항인가? [ 정보와 액션은 사용자 선택 사항이 아님 ]<br/>
-아니라면: 설정으로 만들지 마세오. 앱에 대한 고정된 정보(버전 번호나 서비스 약관)라면 도움말 화면에 넣으세요.
-(새로 고침과 같은) 액션이라면 액션 바에 배치할 곳을 찾으세요.</p>
+<p>1. 정말 사용자가 선택해야 할 사항인가요? [ 정보와 액션은 사용자 선택 사항이 아닙니다 ]<br/>
+○ : 2로 이동하세요.<br/>
+Ｘ : 설정으로 만들지 마세요. 앱에 대한 고정된 정보(버전 번호나 서비스 약관)라면 도움말 화면에 넣으세요.
+(새로 고침과 같은) 액션이라면 배치할 곳을 액션 바에서 찾으세요.</p>
 
-...blahblahblah... 갑자기 급귀찮... -_-
+<p>2. 사용자가 자주 변경하는 사항인가요?
+[ 매번 (적어도) 3단계를 거쳐 접근하는 것이 사용자에게 부담스러울 정도로 빈번한가요? ]
+○ : 설정으로 만들지 마세요. 눈에 잘 띄도록 액션 바에 배치해 더 쉽게 접근할 수 있도록 하세요.<br/>
+Ｘ : 3으로 이동하세요.</p>
 
--->
+<p>3. 대부분의 사용자에게 딱 맞는 설정 값이 있나요?
+[ 적어도 80%의 사용자가 해당 값을 설정하고 다시는 변경할 리 없는 설정 사항인가요? ]<br/>
+○ : 해당 값의 동작이 앱에 고정되어 제공될 경우 해당 설정을 변경하지 못할 경우
+큰 피해를 보게 될 사용자가 있나요? 없다면 설정으로 만들지 마세요. 대신에 대부분의 사용자에게 맞는
+정해진 동작을 제공하세요. 있거나 확실하지 않다면 설정으로 만드세요!<br/>
+Ｘ : 설정으로 만드세요!</p>
 
 <div class="vspace size-3">&nbsp;</div>
 
@@ -86,7 +94,7 @@ title: 설정
   </div>
 </div>
 
-<p>설정 그룹화가 정밀 과학인 것은 아니지만
+<p>설정 그룹화가 정밀하게 측정될 수 있는 것은 아니지만
 앱 전체 설정 갯수에 따라 어떻게 접근하는 것이 좋을지
 다음 몇가지 제안 사항이 있습니다.</p>
 
@@ -140,7 +148,7 @@ title: 설정
 <p>또한 리스트를 줄이기 위해 다음 사항을 따라주세요:</p>
 
 <ul>
-<li>만약 2개 혹은 그 이상의 특정한 설정을 거의 고급 사용자만 사용하고 있다면
+<li>만약 2개 혹은 그 이상의 특정 설정을 거의 고급 사용자만 사용한다면
 주 설정 화면에서 "고급" 부 화면으로 해당 설정을 이동하세요.
 그 항목으로 이동할 수 있도록
 액션 오버플로우에 "고급"이라는 이름의 항목을 배치하세요.</li>
@@ -251,7 +259,7 @@ title: 설정
 <h4>리스트 부 화면</h4>
 <p>비슷한 수준의 항목 목록을 담고 있는 단순한 설정이나 설정 분류에 이 패턴을 사용하세요.</p>
 <p>레이블에는 항목 이름을 제공하고 보조 텍스트는 상태를 표시하는데 사용할 수 있습니다.
-(이 예제에서는 레이블 우측에 아이콘으로 상태 표시를 보강하고 있습니다)
+(이 예제에서는 레이블 우측에 아이콘으로 상태를 보강해 표시하고 있습니다)
 리스트와 연관된 액션을 리스트 자체에 넣는 대신 액션 바에 엮이도록 했습니다.</p>
 
   </div>
@@ -268,7 +276,7 @@ title: 설정
 <h4>마스터 온/오프 스위치</h4>
 <p>분류 안 전체 설정을 켜거나 끄는 동작 방식이 필요할 때 이 패턴을 사용하세요.</p>
 <p>온/오프 스위치는 부 화면 액션 바의 첫 항목으로 배치합니다.
-스위치를 끄면 리스트 내 항목들 또한 없애고 왜 리스트가 비었는지 설명하는 텍스트로 교체합니다.
+스위치를 끄면 리스트 내 항목들 또한 없애고 리스트가 비워진 이유를 설명하는 텍스트로 교체합니다.
 이 스위치가 켜져야 어떤 다른 액션을 수행할 수 있다면 그 액션들 또한 비활성화합니다.</p>
 
   </div>
@@ -378,7 +386,7 @@ title: 설정
 대신 "알림(Notifications)"으로 지정하세요.</li>
 </ul>
 
-<p>설정에 붙일 레이블을 결정했다면 레이블이 어떤 기기에서든 잘 보일 것인지
+<p>설정에 붙일 레이블을 결정했다면 레이블이 어떤 기기에서든 잘 보일지
 세로 화면의 <a href="../style/metrics-grids.html">LDPI 핸드셋</a>으로 확인해주세요.</p>
 
 <h4>하단 보조 텍스트로 상태를 표시하세요, 설명 말구요&hellip;</h4>
