오타 수정, 일관성 유지, 기타 리뷰

--- a/patterns/actionbar.html
+++ b/patterns/actionbar.html
@@ -11,10 +11,10 @@ title: 액션 바
 <ul>
 <li>(<em>새로 만들기</em>나 <em>검색</em> 등과 같은) 중요한 동작을 눈에 띄게 하고 기대했던대로 사용할 수 있게 합니다.</li>
 <li>앱 내의 일관된 탐색과 뷰 전환을 지원합니다.</li>
-<li>별로 사용하지 않는 액션을 액션 오버플로우로 제공함으로 산만함을 줄입니다.</li>
+<li>별로 사용하지 않는 액션을 액션 오버플로우로 제공하여 산만함을 줄입니다.</li>
 <li>앱에 아이덴티티를 부여하는 전용 공간을 제공합니다.</li>
 </ul>
-<p>새로운 안드로이드 앱을 개발하고 있다면
+<p>새로운 안드로이드 애플리케이션을 개발하고 있다면
 액션 바는 여러분이 구현할 수 있는 가장 중요한 디자인 요소 중 하나라는 점을 기억해주세요.
  여기서 설명하는 가이드라인에 따른다면 여러분의 애플리케이션의 인터페이스가 핵심 안드로이드 애플리케이션들과 같은
 일관성을 제공하는데 많은 도움이 될 것입니다.</p>
@@ -80,7 +80,7 @@ title: 액션 바
 <h4>액션 오버플로우</h4>
         <p>
 
-조금 덜 사용하는 액션은 액션 오버플로우에 배치하세요.
+자주 사용하지 않는 액션은 액션 오버플로우에 배치하세요.
 
         </p>
       </li>
@@ -161,7 +161,7 @@ title: 액션 바
 
 <h4>탭</h4>
 
-<p><em>탭</em>은 애플리케이션 뷰와 함께 표시되며 뷰의 탐색과 전환을 수월하게 해줍니다.
+<p><em>탭</em>은 애플리케이션 뷰와 함께 표시되며 뷰의 탐색과 전환을 쉽게 해줍니다.
 사용자의 빈번한 뷰 전환이 예상될 경우 탭을 사용하세요.</p>
 
 
@@ -215,7 +215,7 @@ title: 액션 바
   <div class="layout-content-col span-6">
 
 <h4>스피너(Spinners)</h4>
-<p><em>스피너</em>는 사용자가 애플리케이션에서 뷰 간을 전활할 수 있도록 해주는 드롭다운 메뉴입니다.</p>
+<p><em>스피너</em>는 사용자가 애플리케이션에서 뷰 간을 전환할 수 있도록 해주는 드롭다운 메뉴입니다.</p>
 <p><strong>메인 액션 바에 탭 대신 스피너를 사용해야 하는 경우</strong>:</p>
 <ul>
 <li>탭 바를 표시하기 위해 수직 화면 표시 공간을 줄이고 싶지 않아요.</li>
@@ -304,7 +304,7 @@ title: 액션 바
 <h4>액션 오버플로우</h4>
 <p>액션 바의 액션 오버플로우는 애플리케이션에서 덜 사용하는 액션에 접근할 수 있도록 해줍니다.
 폰에서 오버플로우 아이콘은 메뉴 하드웨어 키가 없는 경우에만 나타납니다.
-메뉴 키를 갖춘 폰은 유저가 메뉴 키를 누를 경우에 액션 오버플로우를 표시합니다.</p>
+메뉴 키를 갖춘 폰은 사용자가 메뉴 키를 누를 경우에 액션 오버플로우를 표시합니다.</p>
 
   </div>
   <div class="layout-content-col span-7">
