--- a/patterns/app-structure.html
+++ b/patterns/app-structure.html
@@ -65,11 +65,11 @@ Gmail이나 Google Play는 다양한 데이터 뷰가 계층 구조로 조합되
 <p>
 앱 시작 화면 레이아웃에는 특별히 주의를 기울어야 합니다.
 시작 화면은 앱이 실행된 후 사용자가 보는 첫 화면입니다.
-그렇기 때문에 시작 화면은 새로운 사용자과 기존 이용자 모두에게 좋은 사용자 경험을 주어야 합니다.
+그렇기 때문에 시작 화면은 새로운 사용자와 기존 이용자 모두에게 좋은 사용자 경험을 주어야 합니다.
 </p>
 
 <p>
-여러분 자신에게 물어보세요. "일반적인 사용자는 내 앱에서 뭘 가장 하고 싶을까?"
+여러분 자신에게 물어보세요. "일반적인 사용자는 내 앱에서 무엇을 가장 하고 싶을까?"
 그리고 거기에 맞추어 첫 화면의 사용자 경험을 구성하세요.
 </p>
 
@@ -175,7 +175,7 @@ Gmail이나 Google Play는 다양한 데이터 뷰가 계층 구조로 조합되
 <h4>탭을 이용해 카테고리 선택과 데이터 표현을 합쳐주세요</h4>
 
 <p>
-카테고리가 유사하거나 수가 적다면 탭을 사용하는 것이 정답일 수 있습니다.
+카테고리가 유사하거나 갯수가 적다면 탭을 사용하는 것이 정답일 수 있습니다.
 탭은 계층 수준을 없애고 사용자가 데이터에 주목하게 하는 이점이 있습니다.
 데이터가 많은 카테고리를 좌우로 움직여 이동하는 것은 명시적인 이동 방법이라기보다는 일반적인 브라우즈 경험과 비슷합니다.
 </p>
