--- a/style/color.html
+++ b/style/color.html
@@ -90,7 +90,7 @@ title: 색상
   }
 </style>
 <p>강조를 위해서는 기본 색상을 사용하세요. 브랜드에 어울리고 시각 요소 사이에 대비를 잘 보여주는 색을 고르세요.
-빨간색과 초록색은 색맹 사용자는 구분할 수 없을지도 모른다는 점을 기억하세요.</p>
+빨간색과 초록색은 색맹 사용자는 구분하지 못할 수 있다는 점을 기억하세요.</p>
 
     
 <div class="color-row-container">
