--- a/style/devices-displays.html
+++ b/style/devices-displays.html
@@ -21,7 +21,7 @@ title: 기기 및 디스플레이
 
 <h4>레이아웃을 최적화하세요</h4>
 <p>큰 기기에서는 더 큰 화면의 장점을 활용하도록 하세요. 다양한 뷰를 조합해 복합 뷰를 만들어
-더 많은 컨텐츠를 담고 탐색을 편리하게 해주세요.</p>
+더 많은 컨텐츠를 담고 탐색을 편리하게 하세요.</p>
 
   </div>
   <div class="layout-content-col span-4">
@@ -44,7 +44,7 @@ title: 기기 및 디스플레이
 <p>그럼 다양한 화면 크기에 맞는 디자인을 하기 위해 어디서부터 시작해야 할까요?
 한가지 방법은 기본 표준(중간 크기, <acronym title="Medium density(중간
 해상도, 160 dpi)">MDPI</acronym>)에서 작업한 후
-크기를 키우거나 줄이는 것입니다. 또다른 방법은 가장 큰 스크린의 기기에서 시작해
+크기를 늘리거나 줄이는 것입니다. 또다른 방법은 가장 큰 스크린의 기기에서 시작해
 더 작은 화면으로 크기를 절충해 줄여나가는 것입니다.</p>
 
 <p>이 주제에 대한 더 자세한 정보를 보시려면 <a href="http://developer.android.com/guide/practices/screens_support.html">다양한 화면 지원하기</a> 페이지를 방문해주세요.</p>
