--- a/style/iconography.html
+++ b/style/iconography.html
@@ -186,7 +186,7 @@ title: 아이콘
 
 
 <p>앱에서 특정 항목의 액션이나 상태를 나타내기 위해 작은 아이콘을 사용하세요. 
-예를 들어 Gmail 앱에서는 중요하다는 표시를 위한 별모양 아이콘이 메세지마다 있습니다.</p>
+예를 들어 Gmail 앱에서는 중요하다는 표시를 위한 별모양 아이콘이 메시지마다 있습니다.</p>
 
 
 
@@ -245,7 +245,7 @@ title: 아이콘
     <img src="../media/iconography_small_colors.png"><div class="vspace size-2">&#160;</div>
 
 <h4>색</h4>
-<p>중립성 없는 색은 목적에 맞게 아껴 사용하세요. 예를 들어 Gmail 앱은 메세지에 즐겨찾기 표시를 위해 별표 안에 노란색을 사용합니다. 
+<p>중립성 없는 색은 목적에 맞게 아껴 사용하세요. 예를 들어 Gmail 앱은 메시지에 즐겨찾기 표시를 위해 별표 안에 노란색을 사용합니다. 
 아이콘이 액션을 담고 있다면 배경과 잘 대조되는 색을 선택하세요.</p>
 
   </div>
