--- a/style/index.html
+++ b/style/index.html
@@ -16,7 +16,7 @@ title: 스타일
 </style>
 <div id="landing-graphic-container">
   <div id="text-overlay">
-    어떤 기기에서든 훌륭하게 보이는, 눈을 뗄 수 없이 멋진 앱을 만들어보세요.
+    어느 기기에서나 훌륭하게 보이는, 눈을 뗄 수 없이 멋진 앱을 만들어보세요.
     <br><br><a href="devices-displays.html" class="landing-page-link">기기 및 디스플레이</a>
   </div>
 
