--- a/patterns/gestures.html
+++ b/patterns/gestures.html
@@ -29,7 +29,7 @@ title: 제스처
 <ul>
 <li class="no-bullet with-icon action">
     <h4>조작법</h4>
-    <p>누르고, 기다렸다, 똅니다</p>
+    <p>누르고, 기다렸다, 뗍니다</p>
 </li>
 </ul>
 </div>
