읽기 쉬운 단어 사용(수단 -> 방법, 묵살하는 -> 부정하는) 일관성 유지(메세지 -> 메시지, 다이얼로그 -> 대화 상자) 문어체 사용(어떤게 -> 어떤 것이) 오타 수정

--- a/building-blocks/dialogs.html
+++ b/building-blocks/dialogs.html
@@ -26,7 +26,7 @@ title: 대화 상자
 <h4>액션 버튼</h4>
 <p>액션 버튼(action button)은 일반적으로 취소(Cancel) 및 확인(OK) 버튼으로 구성되며, 확인(OK) 버튼은 준비된 동작을 아마도 진행할 수 있음을 나타냅니다.
 그러나 옵션들이 설명된 내용의 확인이나 취소 대신, 닫기나 대기와 같은 특정 동작으로 이루어진다면 버튼 스스로가 각각 어떤 동작인지 설명할 수 있어야 합니다.
-대체로, 대화 상자를 묵살하는 동작은 항상 왼쪽에 두고 긍정적인 동작들은 항상 오른쪽에 둡니다.</p>
+대체로, 대화 상자의 내용을 부정하는 동작은 항상 왼쪽에 두고 긍정적인 동작들은 항상 오른쪽에 위치시킵니다.</p>
 </li>
 </ol>
 </div>
