--- a/building-blocks/grid-lists.html
+++ b/building-blocks/grid-lists.html
@@ -4,7 +4,7 @@ title: 그리드 리스트
 ---
 <img src="../media/gridview_overview.png">
 <p>그리드 리스트를 표준 리스트 뷰 대신 사용할 수 있습니다. 그리드 리스트는 이미지와 함께 데이터 모음을 보여주기 위한 가장 적당한
-수단입니다. 단순한 리스트와는 달리 그리드 리스트는 수직, 수평 방향으로 스크롤 할 수 있습니다.</p>
+방법입니다. 단순한 리스트와는 달리 그리드 리스트는 수직, 수평 방향으로 스크롤 할 수 있습니다.</p>
 
 
 
