--- a/building-blocks/text-fields.html
+++ b/building-blocks/text-fields.html
@@ -28,7 +28,7 @@ title: 텍스트 필드
   <div class="layout-content-col span-6">
 
 <h4>텍스트 필드 형태들</h4>
-<p>텍스트 필드에는 숫자, 메세지, 이메일 주소와 같은 다양한 타입이 있습니다.
+<p>텍스트 필드에는 숫자, 메시지, 이메일 주소와 같은 다양한 타입이 있습니다.
 이러한 타입은 필드에 어떤 종류의 문자를 입력받을지 판별해 가상 키보드가
 해당 타입이 자주 사용하는 문자들로 최적화된 레이아웃을 표시하도록 해줍니다.</p>
 
@@ -37,7 +37,7 @@ title: 텍스트 필드
 
 <h4>자동 완성 텍스트 필드</h4>
 <p>자동 완성 텍스트 필드는 텍스트를 실시간으로 완성해주거나 검색 결과를 팝업에 표시해줍니다.
-따라서 사용자는 사용자는 더 정확하고 효율적으로 정보를 입력할 수 있습니다.</p>
+따라서 사용자는 더 정확하고 효율적으로 정보를 입력할 수 있습니다.</p>
 
   </div>
 </div>
