--- a/patterns/notifications.html
+++ b/patterns/notifications.html
@@ -13,7 +13,7 @@ title: 알림(Notifications)
 <h4>알림을 표시해야 할 때</h4>
 
 <p>사람들에게 사랑 받는 애플리케이션을 만들려면,
-사용자의 주의와 시선은 보호해야 할 리소스 임을 인식하는 것이 중요합니다
+사용자의 주의와 시선은 보호해야 할 리소스 임을 인식하는 것이 중요합니다.
 소프트웨어 개발자가 이해할 수 있는 표현을 빌리자면, 사용자는 어떤 값을 바로 반환받기 위해 호출할 수 있는 메소드가 아닙니다.
 사용자의 시선을 스레드 리소스에 빗대자면, 알림을 생성하면
 잠깐 사용자 스레드를 중단하고 그것을 처리해야만 방해했던 알림이 사라지는 것입니다.</p>
