--- a/patterns/settings.html
+++ b/patterns/settings.html
@@ -108,7 +108,7 @@ title: 설정
   </div>
   <div class="layout-content-col span-11">
 
-<p>그룹화 하지 마세요. 그룹화는 득은 커녕 지나치다는 느낌이 듭니다.</p>
+<p>그룹화 하지 마세요. 그룹화는 유용하지 않고 지나치다는 느낌이 듭니다.</p>
 
   </div>
 </div>
@@ -350,13 +350,13 @@ title: 설정
 다음의 질문이 (해당하는 상황이라면) 결정에 도움이 될 수 있습니다:</p>
 
 <ul>
-<li>어떤걸 기본 값이 없을 때 사용자 대부분이 선택할까요?</li>
-<li>어떤게 더 중립적이거나 중도적일까요?</li>
-<li>어떤게 가장 위험성이 적으면서도 무난하고 평범할까요?</li>
-<li>어떤게 배터리도 덜 먹고 패킷 사용량도 적을까요?</li>
-<li>어떤게 디자인 원칙
+<li>어떤 것을 기본 값이 없을 때 사용자 대부분이 선택할까요?</li>
+<li>어떤 것이 더 중립적이거나 중도적일까요?</li>
+<li>어떤 것이 가장 위험성이 적으면서도 무난하고 평범할까요?</li>
+<li>어떤 것이 배터리를 적게 사용하고 패킷 사용량도 적을까요?</li>
+<li>어떤 것이 디자인 원칙
 <a href="../get-started/principles.html#never-lose-my-stuff">내 자료 날아가면 안돼요</a>를 가장 잘 지원할까요?</li>
-<li>어떤게 디자인 원칙
+<li>어떤 것이 디자인 원칙
 <a href="../get-started/principles.html#interrupt-only-if-important">정말 중요할 때만 날 찾으세요</a>를 잘 지원할까요?</li>
 </ul>
 
@@ -685,7 +685,7 @@ title: 설정
 <ul>
 <li><p>설정의 각 항목이 기준에 따라 해당 위치에 어울리는지 확인하세요.</p></li>
 <li><p>7개 이상의 항목이 있다면 설정을 그룹화 할 수 있는 방법을 찾아보세요.</p></li>
-<li><p>사용자가 학습 곡선에 맞닿지 않도록 어디서나 통용되는 디자인 패턴을 사용하세요.</p></li>
+<li><p>사용자가 배우기 쉽도록 어디서나 통용되는 디자인 패턴을 사용하세요.</p></li>
 <li><p>안전하고 중립적이고 대부분의 사용자에게 잘 맞는 기본 값을 선택하세요.</p></li>
 <li><p>각 설정에 깔끔하고 간결한 레이블과 적절한 보조 텍스트를 달아주세요.</p></li>
 </ul>
