--- a/building-blocks/scrolling.html
+++ b/building-blocks/scrolling.html
@@ -24,7 +24,7 @@ title: 스크롤
 
 
 <p>기존의 스크롤과 더불어, 철자 순서로 정렬된 긴 목록은 해당 글자로 시작하는 항목을 빠르게 찾아볼 수 있게 하는
-수단인 색인 스크롤을 제공할 수 있습니다. 색인 스크롤을 사용할 때는 사용자가 스크롤을 하지 않을 때에도
+방법인 색인 스크롤을 제공할 수 있습니다. 색인 스크롤을 사용할 때는 사용자가 스크롤을 하지 않을 때에도
 스크롤 표시가 나타납니다. 색인 스크롤을 터치하거나 드래그하면 현재 글자가 돌출 방식으로 튀어나옵니다.</p>
 
 
