--- a/patterns/pure-android.html
+++ b/patterns/pure-android.html
@@ -89,7 +89,7 @@ UI 요소의 테마를 입맛에 맞게 고치실 때는 다른 플랫폼의 관
 
 <h4>코드로 직접 다른 앱과 연결하지 마세요</h4>
 <p>만들려는 앱이 다른 앱의 기능을 이용하면 좋은 경우가 있습니다.
-앱이 만든 컨텐츠를 SNS나 메세지 앱으로 공유하고 싶거나 웹 링크의 컨텐츠를 웹 브라우저에서 열어보고 싶을 때가 그런 경우입니다.
+앱이 만든 컨텐츠를 SNS나 메시지 앱으로 공유하고 싶거나 웹 링크의 컨텐츠를 웹 브라우저에서 열어보고 싶을 때가 그런 경우입니다.
 이렇게 하려고 어떤 앱으로든 코드로 직접 연결하지는 마세요.
 대신 그 요청을 처리할 수 있는 모든 앱을 나열하는 액티비티 선택 창을 띄우기 위해 안드로이드의 인텐트 API를 쓰세요.
 사용자는 좋아하는 앱으로 작업할 수 있습니다.
@@ -130,7 +130,7 @@ UI 요소의 테마를 입맛에 맞게 고치실 때는 다른 플랫폼의 관
   <div class="layout-content-col span-5">
 
 <h4>줄 항목 끝에 오른쪽 표시를 달지 마세요</h4>
-<p>다른 플랫폼에서는 추가 내용을 볼 수 있는 경우 줄 항목 끝에 오른쪽 표시를 다는 패턴을 자주 사용합니다.</p>
+<p>다른 플랫폼에서는 추가 내용을 볼 수 있는 경우 줄 항목 끝에 오른쪽 표시가 있는 패턴을 자주 사용합니다.</p>
 <p>안드로이드에서는 드릴 다운 줄 항목에 그러한 표식을 사용하지 않습니다. 플랫폼과의 일관성을 유지하도록, 또한 사용자가 그 표식이 무엇을 뜻하는 지 추측할 필요 없도록 사용을 피하세요.</p>
 
   </div>
