ui-overview: 알림 부분 다듬음

--- a/get-started/ui-overview.html
+++ b/get-started/ui-overview.html
@@ -110,10 +110,11 @@ title: UI 개요
 <h2 id="notifications">알림(Notifications)</h2>
 
 
-<p>알림은 사용자가 상태 표시줄을 통해 언제든지 접근할 수 있는 짧은 메시지입니다.
-알림은 업데이트, 일정 알림이나 중요하지만 사용자를 방해할 정도는 아닌 정보를 제공합니다.
-상태 표시줄을 아래로 스와이프해 알림 서랍(notifications drawer)을 엽니다.
-알림을 터치하면 해당 알림과 연관된 앱을 엽니다.
+<p>
+알림은 상태 표시줄을 통해 언제든지 접근할 수 있는 짧은 메시지입니다.
+알림에서는 업데이트나 일정 알림 등 중요하긴 하지만 사용자를 방해할 필요는 없는 정보를 제공합니다.
+상태 표시줄을 아래로 스와이프하여 알림 서랍(notifications drawer)을 열 수 있고,
+그 상태에서 각 알림을 터치하면 그 알림에 해당하는 앱을 엽니다.
 <a href="../patterns/notifications.html">알림에 대한 세부 사항</a></p>
 
 
@@ -124,10 +125,15 @@ title: UI 개요
 </div>
   <div class="layout-content-col span-9">
 
-    <img src="../media/notifications_dismiss.png"><p>대부분의 알림은 제목 한 줄과 메시지 한 줄로 이루어집니다.
-권장하는 레이아웃은 알림을 두 줄로 구성하는 것입니다. 필요하다면 세 번째 줄도 추가할 수 있습니다.
-알림 시간 표시는 선택 사항입니다.</p>
-<p>왼쪽이나 오른쪽으로 알림을 스와이프해 알림 서랍에서 알림을 지울 수 있습니다.</p>
+    <img src="../media/notifications_dismiss.png">
+<p>
+대부분의 알림은 제목 한 줄과 메시지 한 줄로 이루어집니다.
+알림은 두 줄로 구성하는 것이 바람직합니다. 필요하다면 세 번째 줄을 추가하세요.
+선택 사항으로 알림 시간을 넣을 수 있습니다.
+</p>
+<p>
+알림을 좌우로 스와이프하면 알림 서랍에서 그 알림을 지울 수 있습니다.
+</p>
 
   </div>
 </div>
