ui-overview: 일반적인 앱 UI 부분 다듬음

--- a/get-started/ui-overview.html
+++ b/get-started/ui-overview.html
@@ -155,23 +155,29 @@ title: UI 개요
 <ol>
 <li>
 <h4>메인 액션 바</h4>
-<p>앱의 명령 및 통제 센터입니다. 메인 액션 바는 앱의 계층과 뷰를 탐색하고
-중요한 작업을 다루는 요소를 담고 있습니다.</p>
+<p>
+앱의 명령 및 통제 센터입니다. 메인 액션 바는 앱의 계층과 뷰를 탐색하고
+중요한 작업을 다루는 요소를 담고 있습니다.
+</p>
 <p><a href="../patterns/actionbar.html">액션 바에 대한 세부 사항</a></p>
 </li>
 <li>
 <h4>뷰 컨트롤</h4>
-<p>사용자가 앱이 제공하는 여러 뷰를 전환할 수 있습니다.
-뷰는 일반적으로 앱의 데이터를 다양하게 배치하거나 다양한 기능을 제공하도록 구성합니다.</p>
+<p>
+앱이 제공하는 여러 뷰를 전환할 수 있는 방법을 제공합니다.
+뷰는 일반적으로 앱의 데이터를 다양하게 배치하거나 다양한 기능을 제공하도록 구성합니다.
+</p>
 </li>
 <li>
 <h4>컨텐츠 영역</h4>
-<p>이 공간은 앱의 컨텐츠를 표시하는 공간입니다.</p>
+<p>앱의 컨텐츠를 표시하는 공간입니다.</p>
 </li>
 <li>
 <h4>분할 액션 바</h4>
-<p>분할 액션 바는 메인 액션 바 아래나 화면 하단에 표시하는 추가 바로 액션을 나눌 수 있게 해줍니다.
-이 예제의 분할 액션 바에는 메인 액션 바에 들어가지 못한 중요한 액션을 옮겼습니다.</p>
+<p>
+분할 액션 바는 액션들을 추가적인 바를 통해 배치하는 방법으로, 메인 액션 바 아래나 화면 하단에 배치됩니다.
+이 예제에서는 메인 액션 바에 넣기에는 공간이 모자란 중요 액션들을 분할 액션 바에 두었습니다.
+</p>
 </li>
 </ol>
 </div>
