패턴 소개문장 다듬음

--- a/patterns/index.html
+++ b/patterns/index.html
@@ -16,7 +16,7 @@ title: 패턴
 </style>
 <div id="landing-graphic-container">
   <div id="text-overlay">
-    일관성 있고 예측할 수 있는 앱을 설계하세요.
+    일관적이고 예측가능한 앱을 설계하세요.
    <br><br><a href="new-4-0.html" class="landing-page-link">안드로이드
   4.0의 새로운 점</a>
   </div>
