--- a/patterns/new-4-0.html
+++ b/patterns/new-4-0.html
@@ -6,11 +6,12 @@ title: 안드로이드 4.0의 새로운 점
   <div class="layout-content-col span-7">
 
 <h4>내비게이션 바</h4>
-<p>안드로이드 4.0에서는 폰의 전통적인 하드웨어 키를 제거하였습니다. 대신 뒤로
-    가기, 홈, 최근 버튼을 가진 가상 내비게이션을 사용하죠. 하드웨어
-    버튼을 가진 폰과 메뉴 키에 의존적인 안드로이드 3.0 이전의 앱을
-    어떻게 운영체제가 다루는지 
-<a href="compatibility.html">호환성</a>에서 알아보세요.</p>
+<p>
+안드로이드 4.0에서는 폰에 전통적인 하드웨어 키가 있어야 할 필요가 없습니다.
+그 대신 가상 키를 통해 뒤로 가기, 홈, 최근 앱 버튼 내비게이션을 제공하죠.
+안드로이드 4.0에서 기존 폰의 하드웨어 버튼과 메뉴 키를 사용하는 안드로이드 3.0 이전 앱을 어떻게 다루는지
+<a href="compatibility.html">호환성</a> 문서에서 알아보세요.
+</p>
 
   </div>
   <div class="layout-content-col span-6">
