new-4-0: 액션 바 소개 다듬음

--- a/patterns/new-4-0.html
+++ b/patterns/new-4-0.html
@@ -28,8 +28,10 @@ title: 안드로이드 4.0의 새로운 점
   <div class="layout-content-col span-7">
 
 <h4>액션 바</h4>
-<p>액션 바는 안드로이드 앱의 가장 중요한 구조 요소입니다. 액션 바는
-    플랫폼 전반을 일관성 있게 조작하고 앱의 액션을 다룰 수 있게 합니다.</p>
+<p>
+액션 바는 안드로이드 앱 구조에서 가장 중요한 요소입니다.
+액션 바를 통해 플랫폼 일관적인 조작을 할 수 있고, 앱의 액션을 다룰 수도 있습니다.
+</p>
 
   </div>
   <div class="layout-content-col span-6">
