--- a/get-started/creative-vision.html
+++ b/get-started/creative-vision.html
@@ -3,20 +3,11 @@ layout: default
 title: 창조적 비전
 ---
 <img src="../media/creative_vision_main.png">
-<div class="vspace size-1">&#160;</div>
+<div class="vspace size-1">&nbsp;</div>
 
 
-<p>
-아이스크림 샌드위치(안드로이드 4.0)는 안드로이드 디자인의 중요한 이정표입니다.
-픽셀 하나하나를 새로 만들었고, 허니컴에 도입했던 새로운 디자인 방법론을 모바일 기기 전체로 확장했습니다.
-가장 기본적인 요소부터 보면, Roboto라는 고해상도 디스플레이용 글꼴을 새로 만들었습니다.
-또 폰을 위한 액션 바를 프레임워크 레벨에서 추가하고 물리 버튼이 없는 새 폰을 위한 지원도 추가했습니다.
-</p>
-
-<p>
-우리는 핵심 앱 및 전체 시스템을 디자인할 때는 다음과 같은 세 가지 중요한 목표가 있다고 보았습니다.
-</p>
-
+<p>우리는 핵심 앱 및 전체 시스템을 디자인할 때는 다음과 같은 세 가지 중요한 목표가 있다고 보았습니다.
+안드로이드 앱을 디자인 하면서 다음과 같은 목표들을 고려해주세요:</p>
 
 <div class="vspace size-1">&#160;</div>
 
