get-started/principles 일부 문단 다듬음

--- a/get-started/principles.html
+++ b/get-started/principles.html
@@ -217,8 +217,8 @@ title: 디자인 원칙
   <div class="layout-content-col span-7">
 
 <h4 id="looks-same-should-act-same">똑같아 보이면 똑같이 행동해야죠</h4>
-<p>미묘하게 다르게 만들기보다는 시각적으로 다르게 만들어 다른 기능임을 분명하게 알아챌 수 있도록 하세요.
-겉으로는 비슷해서 똑같이 입력했는데 다른 동작을 하는 것은 피해야 합니다.
+<p>기능이 다르다면 시각적으로도 다르게 보이도록, 그래서 차이를 쉽게 이해하도록 만드세요.
+겉으로만 비슷해서 똑같은 입력에 다른 동작을 하는 경우를 피해야 합니다.
 </p>
 
   </div>
@@ -236,7 +236,7 @@ title: 디자인 원칙
   <div class="layout-content-col span-7">
 
 <h4id="interrupt-only-if-important">정말 중요할 때만 날 찾으세요</h4>
-<p>유능한 비서처럼 자질구레한 일로 사용자를 방해하지 마세요.
+<p>사용자를 자질구레한 잡일에서 보호하는 비서가 되어 주세요.
 사용자는 지금 하는 일에 집중하고 싶어하며, 정말 중요하고 급한 일이 아니라면 불편만 느끼게 됩니다.</p>
 
   </div>
