issue #67 checklist 를 '확인 목록' 으로 통일

--- a/patterns/settings.html
+++ b/patterns/settings.html
@@ -681,7 +681,7 @@ title: 설정
   </div>
 </div>
 
-<h2 id="checklist">점검 목록</h2>
+<h2 id="checklist">확인 목록</h2>
 <ul>
 <li><p>설정의 각 항목이 기준에 따라 해당 위치에 어울리는지 확인하세요.</p></li>
 <li><p>7개 이상의 항목이 있다면 설정을 그룹화 할 수 있는 방법을 찾아보세요.</p></li>
