patterns/swipe-views: 체크리스트 -> 확인 목록 (#67)
`id="checklist"`를 사용하는 문단 제목을 '확인 목록'으로 통일.
다른 부분은 이미 통일됨 (#121)

--- a/patterns/swipe-views.html
+++ b/patterns/swipe-views.html
@@ -54,7 +54,7 @@ title: 뷰 스와이프
 <p>앱에서 액션 바 탭을 사용하고 있다면, 뷰와 뷰 사이를 이동하기 위해 스와이프를 사용하세요.</p>
 <div class="vspace size-2">&#160;</div>
 
-<h2 id="checklist">체크리스트</h2>
+<h2 id="checklist">확인 목록</h2>
 
 <ul>
 <li>
