building-blocks/{index,pickers}: 최신 내용 반영
* index: css
* pickers: 일부 div 변경, 일부 문단 다듬음

--- a/building-blocks/index.html
+++ b/building-blocks/index.html
@@ -9,14 +9,14 @@ title: Building Blocks
 
 #text-overlay {
   position: absolute;
-  left: 10px;
-  top: 472px;
+  left: 0px;
+  top: 520px;
   width: 450px;
 }
 </style>
 <div id="landing-graphic-container">
   <div id="text-overlay">
-    뛰어난 앱을 만들 수 있도록 준비한 요소들입니다.
+    뛰어난 앱을 만들 수 있도록 준비된 요소들입니다.
     <br><br><a href="tabs.html" class="landing-page-link">탭</a>
   </div>
 
