--- a/building-blocks/pickers.html
+++ b/building-blocks/pickers.html
@@ -2,21 +2,24 @@
 layout: default
 title: 피커
 ---
-<p>피커는 값들의 모음에서 값 하나를 선택하는 간단한 방법을 제공합니다. 게다가 위/아래 화살표
-버튼을 터치하거나, 키보드나 스와이프 제스처로 값을 설정할 수도 있습니다.</p>
+<p>
+피커(picker)는 값들의 모음에서 값 하나를 선택하는 간단한 방법을 제공합니다.
+위/아래 버튼을 터치하거나, 키보드/스와이프 제스처로 값을 선택할 수도 있습니다.
+</p>
 
 
 <div class="layout-content-row">
-  <div class="layout-content-col span-2">&#160;</div>
   <div class="layout-content-col span-6">
 
     <img src="../media/picker_space.png">
 </div>
-  <div class="layout-content-col span-5">
+  <div class="layout-content-col span-6">
 
 <h4>공간 고려</h4>
-<p>피커는 폼에 내장할 수도 있지만 상대적으로 큰 차지 공간은 대화 상자에 표시하는데 안성맞춤입니다. 
-내장 표시를 하려면 텍스트 필드나 스피너 같은 더 작은 컨트롤의 사용을 고려하세요.</p>
+<p>
+피커를 폼에 내장하여 쓸 수도 있지만, 피커가 차지하는 공간이 큰 편이기 때문에 대화 상자에 넣는 것이 가장 알맞습니다.
+폼에 직접 넣는 경우 텍스트 필드나 스피너처럼 더 작은 컨트롤을 고려하세요.
+</p>
 
   </div>
 </div>
