building-blocks/progress: 앞부분 갱신 및 다듬음
activity indicator는 '활동 표시'로 번역함

--- a/building-blocks/progress.html
+++ b/building-blocks/progress.html
@@ -2,20 +2,19 @@
 layout: default
 title: 프로그레스와 활동
 ---
-<p>사용자가 긴 시간동안 머물러 있을 흥미로운 작업을 진행할 때, 여전히 무언가를 진행하고 있고,
-곧 완료할 프로세스임을 알리는 시각적인 반응물을 제공하세요.</p>
+<p>프로그레스 바(progress bar)와 활동 표시(activity indicator)는 사용자에게 무언가가 진행중이며 시간이 약간 걸린다는 것을 알리는 데에 사용합니다.</p>
 
-<h2 id="progress">프로그레스</h2>
+<h2 id="progress">프로그레스 바</h2>
 
 
-<p>처리가 완료될 시점의 백분율을 알고 있다면 얼마나 오랜 시간이 걸릴지 사용자가 예상할 수 있도록
-프로그레스 바를 사용하세요.</p>
+<p>프로그레스 바는 진행 백분율을 알 수 있을 때 사용합니다. 작업이 얼마나 오래 걸릴지 사용자가 간단히 알 수 있습니다.</p>
 
 
 <img src="../media/progress_download.png">
-<p>프로그레스 바는 항상 0%부터 100% 완료시점까지 진행합니다. 이전 값보다 낮은 값을 설정하는 행동이나
-의미 없는 내용을 표시하는 여러 동작 과정을 표시할 때 동일한 프로그레스 바를 사용하는 것은 피하세요.
-제각각의 동작이 얼마나 걸릴지 확실하지 않다면 불확정 프로그레스 표시(indeterminate progress indicator)를 사용하세요.</p>
+<p>
+프로그레스 바는 항상 0%에서 100%로 진행하며, 진행률이 이전보다 낮아지지 않아야 합니다.
+만약 여러 작업이 연속적으로 진행된다면, 개개 작업이 아니라 전체에 대한 진행률을 표시해주세요. 개개 작업을 표시할 경우 퍼센트가 100%가 된 후 다시 0%가 되는 문제가 있습니다.
+</p>
 
 
 <div class="vspace size-2">&#160;</div>
