progress: 활동 표시 부분 일부 갱신

--- a/building-blocks/progress.html
+++ b/building-blocks/progress.html
@@ -26,12 +26,21 @@ title: 프로그레스와 활동
 </div>
 
 
-<h2 id="activity">활동(Activity)</h2>
+<h2 id="activity">활동 표시</h2>
 
 
-<p>처리가 얼마나 계속될지 모른다면 불확정 프로그레스 표시를 사용하세요. 두가지 방식을 사용할 수 있습니다.
-하나는 밋밋한 바이고 하나는 원입니다. 사용할 공간에 가장 잘 어울리는 것을 사용하세요.</p>
+<p>활동 표시는 소요 시간을 알 수 없을 때 사용합니다.
+활동 표시는 내부적으로 어떤 일이 벌어지는지 사용자에게 알리지 않고
+간단히 사용자에게 작업이 완료될 때까지 기다려 달라고 요청합니다.</p>
 
+
+<p>
+막대 바와 원의 두 가지 모양을 사용할 수 있습니다.
+각 모양은 여러 크기로 제공되며, 홀로 라이트와 홀로 다크 테마 모두 제공됩니다.
+맥락에 따라 적절한 모양과 크기를 선택하세요.
+가령 컨텐츠를 불러오는 중에는 컨텐츠 자리에 큰 원을 표시하는 것이 알맞겠지만, 작은 대화창에서는 다른 표시가 더 나을 것입니다.
+각 활동 표시가 하나의 동작만을 나타내야 합니다.
+</p>
 
 
 <div class="layout-content-row">
