--- a/building-blocks/progress.html
+++ b/building-blocks/progress.html
@@ -52,12 +52,11 @@ title: 프로그레스와 활동
 
     <ol>
 <li class="value-1">
-<h4>활동 바(Activity Bar, 홀로 다크 테마로 표시 중)</h4>
+<h4>활동 바</h4>
         <p>
-
-불확정 활동 바를 앱을 다운로드하기 시작할 때 사용했는데 Google Play가 서버에 아직 연결하지 못한 시점이어서
-다운로드를 시작하는데 시간이 얼마나 걸릴지 알 수 없기 때문입니다.
-
+이 예제에서는 사용자가 다운로드를 요청할 때 활동 바(홀로 다크 테마)를 표시합니다.
+다운로드가 시작하지 않았을 때에는 시간이 얼마나 걸릴 지 알 수 없습니다.
+다운로드가 시작하면 활동 바가 진행 바로 변합니다.
         </p>
       </li>
     </ol>
@@ -74,19 +73,24 @@ title: 프로그레스와 활동
 
     <ol>
 <li class="value-2">
-<h4>활동 원(Activity circle, 홀로 라이트 테마로 표시 중)</h4>
+<h4>활동 원</h4>
         <p>
-
-		불확정 활동 원은 Gmail 앱에서 메시지를 불러오는 중일 때 사용했는데, 이메일을 다운로드하는데
-		시간이 얼마나 걸릴지 알 수 없기 때문입니다.
-
+이 예제에서는 Gmail에서 메시지를 불러오기 시작할 때 활동 원(홀로 라이트 테마)이 표시되며, 이것은 현재 메시지를 다운로드하는 데에 얼마나 걸릴 지 모르기 때문입니다.
         </p>
+        <p>
+활동 원을 사용할 때에는 앱이 현재 어떤 일을 하는지 문자열을 표시하지 마세요.
+원이 도는 것만으로도 작업이 지연되고 있다는 것을 작은 변화로도 충분히 표시할 수 있습니다.
+        </p>
+<div class="layout-content-col span-3" style="margin-left:0">
+          <div class="do-dont-label bad">이렇게 하지 마세요</div>
+          <img src="../media/progress_activity_dont.png">
+</div>
+      
+        <div class="layout-content-col span-3">
+          <div class="do-dont-label good">이렇게 하세요</div>
+          <img src="../media/progress_activity_do.png">
+</div>
       </li>
     </ol>
 </div>
 </div>
-
-
-<p>각 액티비티의 화면에서 하나의 활동 표시만 사용하고, 상황에 따라서 적당한 크기로 맞추어야 합니다.
-예를 들어 큰 활동 원은 내용이 없는 공간에 표시할 때는 괜찮겠지만, 더 작은 다이얼로그 박스에는 어울리지
-않을 것입니다.</p>
