progress: 맞춤 표시 추가
원 사이트 업데이트에 새로 추가된 부분.

--- a/building-blocks/progress.html
+++ b/building-blocks/progress.html
@@ -94,3 +94,56 @@ title: 프로그레스와 활동
     </ol>
 </div>
 </div>
+
+
+<h2 id="custom-indicators">맞춤 표시</h2>
+
+<p>
+기본 진행 바 및 활동 표시는 대부분의 상황에 자연스럽게 사용할 수 있으며 일관성을 위해 되도록 사용해야 합니다.
+하지만, 일부 경우에는 상황에 맞춘 컨트롤을 사용하는 것이 좋을 수 있습니다.</p>
+
+
+<p>예제를 보도록 하겠습니다.<br>
+저희는 모든 Google Play 앱(음악, 책, 영화 등)에서는 각 항목의 다운로드 상태를 최상위 화면에서 보여주고 싶었습니다. 가능한 상태는 다음과 같습니다.
+  </p>
+<ul>
+<li>다운로드되지 않음</li>
+    <li>임시적으로 다운로드(앱에서 자동으로 캐시한 경우)</li>
+    <li>사용자 요청에 따라 기기에 영구히 다운로드</li>
+  </ul>
+<p>또한, 다운로드에는 시간이 소요되기 때문에 한 상태에서 다른 상태로 변하는 과정을 표현해야 했습니다.</p>
+
+<p>
+이것은 하나의 도전이었는데, Google Play 앱들은 다양한 레이아웃을 가지며 그중에는 공간적 제약이 심한 경우들도 있기 때문입니다.
+이런 정보들로 최상위 화면이 어수선해지거나 표지 그림을 가리고 싶지는 않았습니다.
+</p>
+
+<p>그래서 저희는 모든 정보를 표현하면서 필요하면 컨텐츠 위에 표시할 수도 있는 작은 맞춤 표시를 구성했습니다.</p>
+
+
+<img src="../media/progress_activity_custom.png">
+<p>
+맞춤 표시의 색은 컨텐츠를 다운로드했는지(파랑) 아닌지(회색)를 표시합니다.
+압정 모양은 다운로드가 영구적인지(흰색 압정이 세로로) 아닌지(회색 압정이 비스듬히)를 표시합니다.
+그리고 상태가 바뀌는 중간에는 파이 차트를 통해 상태를 표시합니다.
+</p>
+
+
+<div class="layout-content-row">
+  <div class="layout-content-col span-9">
+    <img src="../media/progress_activity_custom_app.png">
+</div>
+  <div class="layout-content-col span-4">
+    <div class="figure-caption">
+      다양한 레이아웃을 가지는 Google Play 앱들의 각 항목에 동일한 맞춤 표시를 사용하고 있습니다.
+      다운로드 및 진행 상태를 어떤 화면 크기에서도 촘촘하게 표현할 수 있습니다.
+    </div>
+  </div>
+</div>
+
+
+<p>
+만약 기본 제공 표시가 목적에 맞지 않는다면(공간 제약이나 상태 복잡성), 직접 디자인하세요.
+안드로이드 전체 디자인과 어울릴 수 있도록 기본 표시의 특징을 어느정도 살려 주세요.
+이 예제에서는 둥근 모양, 푸른 진행바, 평평하고 간단한 스타일을 차용했습니다.
+</p>
