--- a/building-blocks/tabs.html
+++ b/building-blocks/tabs.html
@@ -3,8 +3,10 @@ layout: default
 title: 탭
 ---
 <img src="../media/tabs_overview.png">
-<p>액션 바에 있는 탭은 뷰나 기능적 요소의 탐색과 전환을 용이하게 해주며, 분류된 데이터 셋을 쉽게 찾을 수 있게 해 줍니다.</p>
+<p>액션 바의 탭은 뷰나 기능적 요소의 탐색과 전환을 용이하게 해주며, 분류된 데이터 셋을 쉽게 찾을 수 있게 해 줍니다.</p>
 
+
+<p>탭 사이의 전환 제스처에 대해서는 <a href="../patterns/swipe-views.html">스와이프 뷰</a> 패턴을 참고해주세요.</p>
 
 
 <h2 id="scrollable">스크롤 탭</h2>
@@ -21,7 +23,7 @@ title: 탭
   <div class="layout-content-col span-7">
 
     <video width="400" class="with-shadow play-on-hover" autoplay><source src="../media/tabs_scrolly.mp4" type="video/mp4"><source src="../media/tabs_scrolly.webm" type="video/webm"><source src="../media/tabs_scrolly.ogv" type="video/ogg"></video><div class="figure-caption">
-      Google Play의 스크롤 탭
+      Play 스토어 앱의 스크롤 탭
       <div class="video-instructions">&#160;</div>
     </div>
 
@@ -32,9 +34,13 @@ title: 탭
 
 <h2 id="fixed">고정 탭</h2>
 
+<p>고정 탭은 모든 항목을 동시에 보여줍니다. 다른 뷰를 보려면 탭을 터치하거나 화면을 좌우로 스와이프합니다.</p>
 
-
-<p>고정 탭은 모든 항목을 동시에 보여줍니다. 다른 뷰를 보려면 탭을 터치합니다.</p>
+<p>
+고정 탭은 같은 너비를 가지며 가장 긴 탭 레이블 너비를 기준으로 합니다.
+모든 탭을 표시할 공간이 없다면, 탭 레이블 자체가 스크롤하도록 나타납니다.
+이런 이유 때문에, 고정 탭은 탭 갯수가 3개 이하일 경우 가장 어울립니다.
+</p>
 
 
 <img src="../media/tabs_standard.png">
