--- a/downloads/index.html
+++ b/downloads/index.html
@@ -17,7 +17,7 @@ title: 다운로드
   <div class="layout-content-col span-4">
 
 <p>
-  <a class="download-button" href="https://dl-ssl.google.com/android/design/Android_Design_Downloads_20120229.zip">모두 다운로드</a>
+  <a class="download-button" href="http://developer.android.com/downloads/design/Android_Design_Downloads_20120823.zip">모두 다운로드</a>
 </p>
 
   </div>
@@ -45,11 +45,10 @@ title: 다운로드
   <div class="layout-content-col span-4">
 
 <p>
-  <a class="download-button" href="https://dl-ssl.google.com/android/design/Android_Design_Fireworks_Stencil_20120229.png">Adobe&#174; Fireworks&#174; PNG 스텐실</a>
-  <a class="download-button" href="https://dl-ssl.google.com/android/design/Android_Design_OmniGraffle_Stencil_20120229.graffle">Omni&#174; OmniGraffle&#174; 스텐실</a>
-  <a class="download-button"
-  href="https://dl-ssl.google.com/android/design/Android_Design_Holo_Widgets_20120229.zip">Adobe&#174;
-  Photoshop&#174; 원본 파일</a>
+  <a class="download-button" href="http://developer.android.com/downloads/design/Android_Design_Fireworks_Stencil_20120814.png">Adobe&#174; Fireworks&#174; PNG 스텐실</a>
+  <a class="download-button" href="http://developer.android.com/downloads/design/Android_Design_Illustrator_Vectors_20120814.ai">Adobe&#174; Illustrator&#174; 스텐실</a>
+  <a class="download-button" href="http://developer.android.com/downloads/design/Android_Design_OmniGraffle_Stencil_20120814.graffle">Omni&#174; OmniGraffle&#174; 스텐실</a>
+  <a class="download-button" href="http://developer.android.com/downloads/design/Android_Design_Holo_Widgets_20120814.zip">Adobe&#174; Photoshop&#174; 원본 파일</a>
 </p>
 
   </div>
@@ -79,7 +78,7 @@ title: 다운로드
   <div class="layout-content-col span-4">
 
 <p>
-  <a class="download-button" href="https://dl-ssl.google.com/android/design/Android_Design_Icons_20120229.zip">액션 바 아이콘 모음</a>
+  <a class="download-button" href="http://developer.android.com/downloads/design/Android_Design_Icons_20120814.zip">액션 바 아이콘 모음</a>
 </p>
 
   </div>
@@ -107,10 +106,8 @@ title: 다운로드
   <div class="layout-content-col span-4">
 
 <p>
-  <a class="download-button" href="https://dl-ssl.google.com/android/design/Roboto_Hinted_20111129.zip">로보토</a>
-  <a class="download-button"
-  href="https://dl-ssl.google.com/android/design/Roboto_Specimen_Book_20111129.pdf">견본
-  책</a>
+  <a class="download-button" href="http://developer.android.com/downloads/design/Roboto_Hinted_20120823.zip">로보토</a>
+  <a class="download-button" href="http://developer.android.com/downloads/design/Roboto_Specimen_Book_20111129.pdf">견본 책</a>
 </p>
 
   </div>
@@ -135,9 +132,7 @@ title: 다운로드
   <div class="layout-content-col span-4">
 
 <p>
-  <a class="download-button"
-  href="https://dl-ssl.google.com/android/design/Android_Design_Color_Swatches_20120229.zip">색상
-  견본</a>
+  <a class="download-button" href="http://developer.android.com/downloads/design/Android_Design_Color_Swatches_20120229.zip">색상 견본</a>
 </p>
 
   </div>
