--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 
+title: 디자인
 ---
 <style>
 #landing-graphic-container {
@@ -9,7 +9,7 @@ title:
 
 #text-overlay {
   position: absolute;
-  left: 10px;
+  left: 0;
   top: 472px;
   width: 280px;
 }
